--- a/product/大数据与AI/文字识别/购买指南/计费概述.md
+++ b/product/大数据与AI/文字识别/购买指南/计费概述.md
@@ -626,7 +626,7 @@
 <tr>       
       <td>金融票据切片识别</td>
 			<td rowspan="13">通用票据识别（小票）</td>
-      <td rowspan="13">0.10元次</td>  
+      <td rowspan="13">0.10元/次</td>  
 			<td rowspan="13">0.07元/次</td> 
 			<td rowspan="13">0.04元/次</td>
 			<td rowspan="13"><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
@@ -738,9 +738,9 @@
 		 <tr>  
       <td>企业四要素核验</td> 
 			<td>企业四要素核验</td>
-      <td>1.2元/次</td>  
-			<td>1元/次</td>  
-			<td>0.9元/次</td>
+      <td>1.20元/次</td>  
+			<td>1.00元/次</td>  
+			<td>0.90元/次</td>
 			<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
      </tr>
 		 <tr>
