--- a/product/域名与网站/网站建设/购买指南/退款规则.md
+++ b/product/域名与网站/网站建设/购买指南/退款规则.md
@@ -1,6 +1,6 @@
 您可以登录 [网站建设控制台](https://console.cloud.tencent.com/wds/info) 进行退款操作，相关说明如下：
 1. 服务只包含建站系统：开通后5天内无条件全额退款（仅限首次购买的建站服务），超过一次后，按建站系统剩余的有效时间原价等比例退款。
-2. 服务包含建站系统和建站设计服务：将客户控制台确认的需求作为服务开始的标准。服务开始前可在5天内无条件退款；服务开始后，网站制作未交付上线，系统部分按系统剩余时间原价等比例退款，设计服务部分按照已确认部分占总设计量的百分比原价退款。
+2. 服务包含建站系统和建站设计服务：将客户控制台确认的需求作为服务开始的标准。服务开始前可在5天内无条件退款；服务开始后，网站制作未交付上线，系统部分按系统剩余时间原价等比例退款，设计服务部分按照已确认部分占总设计量的百分比原价等比例退款。
 
 >?若您通过活动等优惠渠道进行购买网站建设服务，将以原价计算方式进行等比例退款。原价价格详情参见：[定价详情](https://cloud.tencent.com/document/product/1276/46518)。
 
