--- a/product/计算与网络/容器服务/故障处理/授权腾讯云运维.md
+++ b/product/计算与网络/容器服务/故障处理/授权腾讯云运维.md
@@ -12,7 +12,7 @@
 4. 在**管理权限**页中，选择赋予腾讯云的操作权限。如下图所示：
 ![](https://main.qcloudimg.com/raw/33211f3e2988a950dde6ac05dcbdc83f.png)
 5. 单击**完成**。您可在 [我的工单](https://console.cloud.tencent.com/workorder) 中查看问题处理进度。
->! 腾讯云仅能够登陆您授权的集群，您可以随时吊销腾讯云运维权限。您可以通过删除相关资源（ClusterRoleBinding/tkeopsaccount-ClusterRole、ServiceAccount/tkeopsaccount、Sercet/tkeopsaccount-token-xxxx）吊销腾讯云运维权限。
+>! 腾讯云仅能够登录您授权的集群，您可以随时吊销腾讯云运维权限。您可以通过删除相关资源（ClusterRoleBinding/tkeopsaccount-ClusterRole、ServiceAccount/tkeopsaccount、Sercet/tkeopsaccount-token-xxxx）吊销腾讯云运维权限。
 >
 
 
