--- a/product/物联网/物联使能/服务管理/物联网应用服务简介.md
+++ b/product/物联网/物联使能/服务管理/物联网应用服务简介.md
@@ -12,7 +12,7 @@
 
 ## [通用服务](id:test1)
 
-物联网 SaaS 服务提供如下官方通用服务。通用服务默认已开通，您可以在物联网应用开发过程中直接集成这些服务。
+物联网 SaaS 服务提供如下官方通用服务。通用服务默认已开通，您可以在物联网 SaaS 开发过程中直接集成这些服务。
 
 - [设备管理](https://cloud.tencent.com/document/product/1465/59056#.E8.AE.BE.E5.A4.87.E7.AE.A1.E7.90.86)：为物联网 SaaS 提供已关联设备的管理服务。
 - [设备数据查询](https://cloud.tencent.com/document/product/1465/59056#.E6.95.B0.E6.8D.AE.E6.9F.A5.E8.AF.A2)：为物联网 SaaS 提供已关联设备的数据查询服务。
