--- a/product/大数据与AI/互动白板/客户端API/Android/关键类型定义.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/关键类型定义.md
@@ -1,5 +1,3 @@
-## 互动白板关键类型
-
 ### TEduBoardController.TEduBoardErrorCode
 
 由 TEduBoardController.TEduBoardCallback.onTEBError 触发，出现此错误表示白板已经不可用<br/>白板错误码 [TEduBoardErrorCode](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardErrorCode.html)
@@ -11,9 +9,9 @@
 | TEDU_BOARD_ERROR_LOAD | int | 3 |白板加载失败，监听到此错误，建议进行重试 |
 | TEDU_BOARD_ERROR_TIM_INVALID | int | 5 |互动白板内置 IMSDK 不可用 互动白板内部会反射调用 IMSDK 接口，如果 IMSDK 升级了后则会调用失败<br/>请参考 [TIM 同步信令通道](https://cloud.tencent.com/document/product/1137/60737) 文档 |
 | TEDU_BOARD_ERROR_HISTORYDATA | int | 6 |同步历史数据失败，监听到此错误，建议进行重试 |
-| TEDU_BOARD_ERROR_RUNTIME | int | 7 | 白板运行错误，请检查sdkAppId，userId, userSig是否正确；请根据错误信息描述，查阅[错误码文档](https://cloud.tencent.com/document/product/269/1671) |
+| TEDU_BOARD_ERROR_RUNTIME | int | 7 | 白板运行错误，请检查 sdkAppId、userId、userSig 是否正确；请根据错误信息描述，查阅[错误码文档](https://cloud.tencent.com/document/product/269/1671) |
 | TEDU_BOARD_ERROR_AUTH_TIMEOUT | int | 8 |服务鉴权超时，可以存在网络问题，请重试 |
-| TEDU_BOARD_ERROR_DATA_TOO_LARGE | int | 9 |addImagesFile传输的数据太大，请分拆成两个或多个传递（例如，添加图片组文件时 url 数量太大） |
+| TEDU_BOARD_ERROR_DATA_TOO_LARGE | int | 9 |addImagesFile 传输的数据太大，请分拆成两个或多个传递（例如，添加图片组文件时 url 数量太大） |
 | TEDU_BOARD_ERROR_PATH_INVALID | int | 10 |路径非法 |
 | TEDU_BOARD_ERROR_WRITE_ERROR | int | 11 |文件写入错误 |
 
@@ -26,11 +24,11 @@
 | --- | --- | --- | --- |
 | TEDU_BOARD_WARNING_SYNC_DATA_PARSE_FAILED | int | 1 | 接收到其他端的同步数据解析错误，出现该警告的原因一般为业务方修改了白板信令数据结构或者将非白板信令也传递给了白板 | 
 | TEDU_BOARD_WARNING_TIM_SEND_MSG_FAILED | int | 2 | 使用互动白板内部通过反射调用IM发送消息失败 |
-| TEDU_BOARD_WARNING_H5PPT_ALREADY_EXISTS | int | 3 | 调用addTranscodeFile接口时候传入的课件已经存在，msg中包含了fileId，可直接使用switchFile进行切换 |
+| TEDU_BOARD_WARNING_H5PPT_ALREADY_EXISTS | int | 3 | 调用 addTranscodeFile 接口时候传入的课件已经存在，msg 中包含了 fileId，可直接使用 switchFile 进行切换 |
 | TEDU_BOARD_WARNING_ILLEGAL_OPERATION | int | 5 | 互动白板历史数据加载完成回调（onTEBHistroyDataSyncCompleted）之前禁止调用接口进行操作白板 |
-| TEDU_BOARD_WARNING_H5FILE_ALREADY_EXISTS | int | 6  | 调用addH5File接口传入的h5 url已经存在 |
-| TEDU_BOARD_WARNING_VIDEO_ALREADY_EXISTS | int | 7 | 调用addVideoFile接口传入的video url已经存在 |
-| TEDU_BOARD_WARNING_IMAGESFILE_ALREADY_EXISTS | int | 8 | 调用addImagesFile接口传入的图片数组数据已经存在 |
+| TEDU_BOARD_WARNING_H5FILE_ALREADY_EXISTS | int | 6  | 调用 addH5File 接口传入的 h5 url 已经存在 |
+| TEDU_BOARD_WARNING_VIDEO_ALREADY_EXISTS | int | 7 | 调用 addVideoFile 接口传入的 video url 已经存在 |
+| TEDU_BOARD_WARNING_IMAGESFILE_ALREADY_EXISTS | int | 8 | 调用 addImagesFile 接口传入的图片数组数据已经存在 |
 
 ### TEduBoardController.TEduBoardAccessibleOperation
 [互动白板可操作权限](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardAccessibleOperation.html)
@@ -311,10 +309,10 @@
 
 | 枚举 | 类型 | 值 | 描述 |
 | --- | --- | --- | --- |
-| TEDU_BOARD_TEXT_STYLE_BOLD | int	| | 粗体样式 |
-| TEDU_BOARD_TEXT_STYLE_BOLD_ITALIC | int	| | 粗斜体样式 |
-| TEDU_BOARD_TEXT_STYLE_ITALIC | int	| | 斜体样式 |
-| TEDU_BOARD_TEXT_STYLE_NORMAL | int	| | 常规样式 |
+| TEDU_BOARD_TEXT_STYLE_BOLD | int	| -| 粗体样式 |
+| TEDU_BOARD_TEXT_STYLE_BOLD_ITALIC | int	| -| 粗斜体样式 |
+| TEDU_BOARD_TEXT_STYLE_ITALIC | int	|- | 斜体样式 |
+| TEDU_BOARD_TEXT_STYLE_NORMAL | int	|- | 常规样式 |
 
 ### TEduBoardController.TEduBoardToolType
 
@@ -390,7 +388,7 @@
 
 | 属性 | 类型 | 值 | 描述 |
 | --- | --- | --- | --- |
-| elementId | java.lang.String | - | 元素ID |
+| elementId | java.lang.String | - | 元素 ID |
 | type | int | - | 元素类型 |
 
 ### TEduBoardController.ElementOperationAuthority
@@ -400,10 +398,10 @@
 
 | 属性 | 类型 | 值 | 描述 |
 | --- | --- | --- | --- |
-| disableArbitraryScale | boolean | - | 是否禁用任意缩放 (文本元素默认为true,不可更改) |
+| disableArbitraryScale | boolean | - | 是否禁用任意缩放 (文本元素默认为 true，不可更改) |
 | disableMove | boolean | - | 是否禁用移动  |
 | disableProportionScale | boolean | - | 是否禁用等比例缩放  |
-| disableRotate | boolean | - | 是否禁用旋转 (文本元素默认为true,不可更改) |
+| disableRotate | boolean | - | 是否禁用旋转 (文本元素默认为 true，不可更改) |
 
 ### TEduBoardController.MouseToolBehavior
 
@@ -412,7 +410,7 @@
 
 | 属性 | 类型 | 值 | 描述 |
 | --- | --- | --- | --- |
-| h5PPT | boolean | - | 设置鼠标工具在动态 PPT 转码的文件翻页行为，默认为true |
+| h5PPT | boolean | - | 设置鼠标工具在动态 PPT 转码的文件翻页行为，默认为 true |
 | imgFile | boolean | - | 设置鼠标工具在图片文件（addImagesFile 接口添加的文件）翻页行为，默认为 true |
 | imgPPT | boolean | - | 设置鼠标工具在静态 PPT 转码文件翻页行为，默认为 true |
 | whiteBoard | boolean | - | 设置鼠标工具在普通白板翻页行为，默认为 true |
