--- a/product/企业应用/身份治理服务/购买指南.md
+++ b/product/企业应用/身份治理服务/购买指南.md
@@ -12,21 +12,13 @@
 </thead>
 <tbody>
 <tr>
-<td>旗舰版</td>
+<td>公有云版</td>
 <td>打通企业多个身份源数据的信息，解决上下游数据同步、全应用管理的困难，连接本地或云端应用，适配多样的企业既有应用</td>
-<td rowspan="2"><li>账号数阶梯套餐包：阶梯价格计费，不同账号数范围对应不同价格，其中旗舰版按月计费，连接版按年计费；<br><li>咨询实施服务：体现为人天数，根据客户定制需求中需要额外进行开发的实际工作量而定，需腾讯云 IDaaS 工作人员针对实际场景进行评估，与客户确定具体人天，双方确认后与账号数阶梯套餐包一同购买</td>
+<td><li>账号数阶梯套餐包：阶梯价格计费，不同账号数范围对应不同价格，其中公有云版按月计费；<br><li>咨询实施服务：体现为人天数，根据客户定制需求中需要额外进行开发的实际工作量而定，需腾讯云 IDaaS 工作人员针对实际场景进行评估，与客户确定具体人天，双方确认后与账号数阶梯套餐包一同购买</td>
 </tr>
-<tr>
-<td>连接版</td>
-<td>帮助企业与 SaaS 服务进行一对一连接，快速完成单一应用的账户信息同步与登录</td>
-</tr>
-<td>尊享版</td>
-<td>旗舰版的私有化部署版本，支持一次性买断租户服务</td>
-<td rowspan="2"><li>每套产品采用一次性收费，尊享版和优享版价格不同<br><li>咨询实施服务：体现为人天数，根据客户定制需求中需要额外进行开发的实际工作量而定，需腾讯云 IDaaS 工作人员针对实际场景进行评估，与客户确定具体人天，双方确认后与账号数阶梯套餐包一同购买</td>
-</tr>
-</tr>
-<td>优享版</td>
-<td>连接版的私有化部署版本，支持一次性买断租户服务</td>
+<td>本地部署版</td>
+<td>公有云版的私有化部署版本，支持一次性买断租户服务</td>
+<td rowspan="2"><li>每套产品采用一次性收费，对账号数不做限制<br><li>咨询实施服务：体现为人天数，根据客户定制需求中需要额外进行开发的实际工作量而定，需腾讯云 IDaaS 工作人员针对实际场景进行评估，与客户确定具体人天，双方确认后与账号数阶梯套餐包一同购买</td>
 </tr>
 </tbody></table>
 
