--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/路由表/概述.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/路由表/概述.md
@@ -30,10 +30,10 @@
 ## 等价路由 
 等价路由 ECMP（Equal-CostMultipathRouting），是指到达同一目的地址存在多条相同代价的不同路径。在数据包传输时，如果使用传统的路由技术，去往同一目的地址的数据包仅能利用其中一条路径，而其他路径处于备份或者无效状态，当一条路径故障时，切换路径也需要耗费一定的时间，而等价路由可以在网络环境下同时使用多条路径，不仅增加了传输带宽，也实现了多路径流量负载均衡和冗余链路备份的目的。
 
-VPC支持部分同类型路由形成ECMP，不同类型间均不支持ECMP，情况如下：
+- VPC 同类型路由形成 ECMP 的情况如下：
 
 | 下一跳类型     | 是否支持同类型形成 ECMP  | ECMP 支持的最大数量 |
-| -------------- | ----------------------- | --------------------------- |
+ | -------------- | ----------------------- | --------------------------- |
 | NAT 网关        | 否                       | N/A                 |
 | 云服务器公网 IP | 否                     | N/A                 |
 | 云服务器       | 是                    | 同类型最多8个       |
@@ -43,9 +43,11 @@ VPC支持部分同类型路由形成ECMP，不同类型间均不支持ECMP，情
 | 高可用虚拟 IP   | 是                    | 同类型最多8个       |
 | VPN 网关        | 是                      | 同类型最多8个       |
 
-<dx-alert infotype="explain" title="">
-云联网支持与专线网关/对等连接形成 ECMP，且仅支持1个。
-</dx-alert>
+- VPC 不同类型形成 ECMP 情况如下：
+  + NAT 网关和云服务器可形成 ECMP。
+  + 如已有自学习的云联网路由，当新增配置到专线网关/对等连接的自定义路由时，云联网与专线网关/对等连接可形成 ECMP。
+  + 如已有专线网关/对等连接的自定义路由，当加入云联网，且希望和云联网形成 ECMP 时，请联系 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
+
 
 
 ### 应用场景
@@ -56,9 +58,9 @@ VPC支持部分同类型路由形成ECMP，不同类型间均不支持ECMP，情
 
 VPC 路由表在添加路由策略时，根据下一跳类型定义了不同的优先级，即去往同一目的端，可以配置下一跳为不同类型的网关，形成主备路由，再结合 VPC 网络探测功能，探测链路质量和可达性，通过配置告警及时发现链路异常，快速切换主备路由，以满足业务高可用。
 >?
->+ 路由优先级功能目前处于内测中，如有需要，请 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
+>+ VPC 默认没有路由优先级功能，该功能目前处于内测中，如需使用，请联系 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
 >+ VPC 路由表中根据不同的下一跳类型定义了不同的优先级，目前默认路由优先级为：云联网 > 专线网关 > VPN 网关 > 其他。
->+ 暂不支持控制台修改优先级，如需调整，请 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
+>+ 暂不支持控制台修改优先级，如需调整，请联系 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
 
 VPC 不同类型路由支持主备情况如下：
 
