--- a/product/大数据与AI/互动白板/客户端API/Android/事件回调.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/事件回调.md
@@ -101,4 +101,4 @@
 | [onTEBUndoStatusChanged](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBUndoStatusChanged-boolean-)  | 白板可撤销状态改变回调  |
 | [onTEBVideoStatusChanged](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBVideoStatusChanged-java.lang.String-int-float-float-)  | 视频文件状态回调  |
 | [onTEBZoomDragStatus](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBZoomDragStatus-java.lang.String-int-int-int-)  | 远端白板缩放移动状态回调  |
-| [onTEBClassGroupStatusChanged](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBClassGroupStatusChanged-boolean-java.lang.String-int-java.lang.String-)  | 分组讨论状态变更  |
+| [onTEBClassGroupStatusChanged](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBClassGroupStatusChanged-boolean-java.lang.String-int-java.lang.String-)  | 分组讨论状态变更  |
