--- a/product/物联网/物联使能/产品动态.md
+++ b/product/物联网/物联使能/产品动态.md
@@ -14,7 +14,7 @@
 </thead>
 <tbody><tr>
 <td>物联使能新品上线</td>
-<td >为设备制造商、物联网 SaaS 开发商以及方案商提供一站式物联网 SaaS 开发服务。提供物联网 SaaS 高效低成本托管与服务快速集成能力，帮助物联网 SaaS 提升产品竞争力</td>
+<td >为设备制造商、物联网 SaaS 开发商以及方案商提供一站式物联网 SaaS 开发服务。提供物联网 SaaS 高效低成本托管与服务快速集成能力，帮助物联网 SaaS 提升产品竞争力。</td>
 <td>2021-07-29</td> 
 <td><a href="https://cloud.tencent.com/document/product/1465/57906">产品概述</tr>
 </tbody></table>
