--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/路由表/概述.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/路由表/概述.md
@@ -43,7 +43,7 @@
 | 高可用虚拟 IP   | 是                    | 同类型最多8个       |
 | VPN 网关        | 是                      | 同类型最多8个       |
 
-- VPC 不同类型形成 ECMP 情况如下：
+- VPC 不同类型路由形成 ECMP 情况如下：
   + NAT 网关和云服务器可形成 ECMP。
   + 如已有自学习的云联网路由，当新增配置到专线网关/对等连接的自定义路由时，云联网与专线网关/对等连接可形成 ECMP。
   + 如已有专线网关/对等连接的自定义路由，当加入云联网，且希望和云联网形成 ECMP 时，请联系 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
