--- a/product/企业应用/身份治理服务/购买指南.md
+++ b/product/企业应用/身份治理服务/购买指南.md
@@ -27,11 +27,7 @@
 
 ## 购买方式
 
-
-
-
-所有用户均可通过腾讯云 [腾讯云 IDaaS 购买页](https://buy.cloud.tencent.com/cig) 进行购买，与腾讯云 IDaaS 工作人员沟通后，根据实际业务情况选择不同服务。用户通过预付费的方式进行服务选购，旗舰版和连接版为包年包月付费模式，尊享版和优享版为一次性付款付费模式。
-
+所有用户均可通过腾讯云 [腾讯云 IDaaS 购买页](https://buy.cloud.tencent.com/cig) 进行购买，与腾讯云 IDaaS 工作人员沟通后，根据实际业务情况选择不同服务。用户通过预付费的方式进行服务选购，公有云版为包年包月付费模式，本地部署版为一次性付款付费模式。
 >! **购买前请 [联系我们](https://cloud.tencent.com/apply/p/0fy0f96uol9d) ，相关工作人员将协助您对业务场景进行评估。**
 
 
