--- a/product/大数据与AI/语音识别/语音识别 API 2017/录音识别回调说明.md
+++ b/product/大数据与AI/语音识别/语音识别 API 2017/录音识别回调说明.md
@@ -33,8 +33,8 @@ code=0&requestId=4000048858&appid=12516&projectid=0&text=%5B0%3A1.640%2C0%3A4.60
 
 | 参数名称 | 类型 | 描述 |  
 | --- | --- | --- |
-| Code |  Int64 | 错误码，0为成功，其他值代表失败 |
-| Message |  String | 失败原因说明 |
+| code |  int64 | 错误码，0为成功，其他值代表失败 |
+| message |  string | 失败原因说明 |
 
 [](id:status)
 ## 4. 回调状态码
