--- a/product/视频服务/直播/管理控制台/控制台管理（new）/功能模板/录制配置.md
+++ b/product/视频服务/直播/管理控制台/控制台管理（new）/功能模板/录制配置.md
@@ -25,7 +25,7 @@
 2. 单击 **创建录制模板** 设置模板信息，进行如下配置：
 ![](https://main.qcloudimg.com/raw/5cd41c188b58954d38af6123a9e39c8e.png)
 <table>
-   <thead><tr><th>配置项</th><th>配置描述</th></tr></thead>
+   <thead><tr width="15%"><th>配置项</th><th>配置描述</th></tr></thead>
    <tbody><tr>
    <tr>
    <td>模板名称</td>
@@ -41,7 +41,7 @@
 3. 勾选需要录制格式后，弹出相关格式的设置界面，可选择一个或多个录制格式同时进行设置。请进行如下设置：
 ![](https://main.qcloudimg.com/raw/bd9ad13f599b1cfd5d99b06b2f20b923.png)
 <table>
-   <thead><tr><th colspan=2>配置项</th><th>配置描述</th></tr></thead>
+   <thead><tr width="24%"><th colspan=2>配置项</th><th>配置描述</th></tr></thead>
    <tbody><tr>
       <tr>
       <td colspan=2>单个录制文件时长（分钟）</td>
@@ -59,7 +59,7 @@
       <td colspan=2>指定点播应用/分类</td>
       <td>支持录制至云点播 VOD 指定 <a href="https://console.cloud.tencent.com/vod/app-manage">子应用</a> 的点播分类中，默认录制至账号主应用，仅支持写入状态为开启的子应用。</td>
       </tr><tr>
-      <td rowspan=2>高级配置</td>
+      <td rowspan=2 width="12%">高级配置</td>
       <td>视频存储策略</td> 
       <td><ul style=margin:0><li>若录制视频为正常业务回放需要,标准存储即可满足需求，默认为标准存储。</li><li>支持对录制至云点播上的媒资进行降冷操作，若录制文件不需要频繁访问，可以使用降冷功能来实现低频访问长期存储。</li></ul></td>
       </tr><tr>
