--- a/product/域名与网站/企业邮箱/常见问题/企业邮箱域名类问题.md
+++ b/product/域名与网站/企业邮箱/常见问题/企业邮箱域名类问题.md
@@ -26,9 +26,9 @@
 
 在 Windows 中查看 MX 记录的方法：
 
-1. 通过 DOS 窗口查看，如果您使用 Windows 系统，请您按照步骤【开始】-【运行】-【输入 cmd】即可运行。如下图所示：
+1. 通过 DOS 窗口查看，如果您使用 Windows 系统，请您按照步骤**开始 > 运行 > 输入 cmd** 即可运行。如下图所示：
 ![](https://main.qcloudimg.com/raw/2aca7a7b2cbf01ed833de5d9f45f808f.png)
-2. 单击【确定】，在打开的窗口中输入“nslookup -qt=mx 域名”，即可看到您域名的 MX 记录。如下图所示：
+2. 单击**确定**，在打开的窗口中输入“nslookup -qt=mx 域名”，即可看到您域名的 MX 记录。如下图所示：
 ![](https://main.qcloudimg.com/raw/0b9abc7ae5aded483ef11e8068a2f304.png)
 腾讯企业邮要求设置的 MX 记录有两条，分别是：
  - mxbiz1.qq.com.  (优先级5)
