--- a/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/30-轨道元素.md
+++ b/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/30-轨道元素.md
@@ -13,7 +13,9 @@
 | [frame](#frame)           | 特效。                         |
 | [transition](#transition) | 转场。                         |
 
-### video[](id:video)
+[](id:video)
+
+### video
 
 该种类的素材我们提供了更丰富的处理形式，具体请参见 [多媒体处理](#Media)，元素示例如下：
 
@@ -47,7 +49,8 @@ let videoItem = {
 };
 ```
 
-### image[](id:image)
+[](id:image)
+### image
 
 该种类的素材我们提供了更丰富的处理形式，具体请参见 [多媒体处理](#Media)，图片除开没有自身时间线外，与视频类型素材基本一致，示例如下：
 
@@ -76,7 +79,8 @@ let imageItem = {
 };
 ```
 
-### audio[](id:audio)
+[](id:audio)
+### audio
 
 该种类的素材我们提供了更丰富的处理形式，具体请参见 [多媒体处理](#Media)，示例如下：
 
@@ -102,7 +106,8 @@ let audioItem = {
 };
 ```
 
-### title[](id:title)
+[](id:title)
+### title
 作为内容填充的文本文字，内容填充的文字可以调整样式，示例数据如下：
 
 ```js
@@ -170,7 +175,8 @@ let titleItem = {
 | scale  | 放大   | in，out    |
 | bounce | 弹跳   | in         |
 
-### subtitle[](id:subtitle)
+[](id:subtitle)
+### subtitle
 
 字幕类型基本示例如下，字幕类型素材的文字样式轨道通用，所以文字样式是挂载在轨道数据结构：
 
@@ -215,7 +221,8 @@ let styleItem = {
 ```
 >? 字幕文字的`params`支持 [文字通用设置](#Text_general_properties)。
 
-### frame[](id:frame)
+[](id:frame)
+### frame
 >! 特效元素，只支持固定模版，和固定操作。特效必须覆盖其它素材，所以轨道层级处于顶层位置。更多内容请参见 [image-glshader](#image-glshader)。
 
 示例：
@@ -239,7 +246,9 @@ let item = {
   controlVisible: true, // 前端预览控制是否可见
 };
 ```
-### transition[](id:transition)
+
+[](id:transition)
+### transition
 >! 转场元素，只支持固定模版。转场元素必须在两个 video 元素之间。转场会叠加两个元素之间时间，转场是平均过渡，所以对转场前后元素有时间要求。推荐使用我们的SDK做转场添加操作。具体请参见 [典型案例](https://cloud.tencent.com/document/product/1156/51228)
 
 示例：
@@ -396,8 +405,8 @@ let trackItem = {
 
 
 ## 通用数据类型
-
-### 文字通用属性[](id:Text_general_properties)
+[](id:Text_general_properties)
+### 文字通用属性
 
 >? 适用于`title`的`text_style`属性，以及`subtitle`的`params`属性。
 
@@ -424,7 +433,8 @@ let trackItem = {
 | background_alpha  | number | 全屏背景透明度，范围[0, 100]，background_color 存在时有效。                     |
 | margin_bottom     | number | 仅字幕（subtitle）可用，默认为 0。                                                        |
 
-### 多媒体处理[](id:Media)
+[](id:Media)
+### 多媒体处理
 
 >? 该属性允许调整素材的一些基础信息，通过`operations`字段进行设置，完整能力如下列表，**Y** 表示支持此操作，**N** 表示不支持。
 
@@ -440,7 +450,7 @@ let trackItem = {
 | [image_mosaic](#image-mosaic)               | 不支持      | 不支持      | 不支持      | 不支持           | 支持     | 马赛克。                 |
 | [image_glshader](#image-glshader)           | 不支持      | 不支持      | 不支持      | 不支持           | 支持     | 特效。                   |
 | [image_lens_stretch](#image_lens_stretch)   | 支持     | 支持     | 不支持      | 不支持           | 支持     | 运动效果。               |
-| [audio_volumes](#audio_volumes)   | 支持     | 不支持     | 支持      | 不支持           | 不支持     | 音量调整               |
+| audio_volumes   | 支持     | 不支持     | 支持      | 不支持           | 不支持     | 音量调整               |
 
 基础示例：
 ```js
