--- a/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/30-轨道元素.md
+++ b/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/30-轨道元素.md
@@ -450,7 +450,7 @@ let trackItem = {
 | [image_mosaic](#image-mosaic)               | 不支持      | 不支持      | 不支持      | 不支持           | 支持     | 马赛克。                 |
 | [image_glshader](#image-glshader)           | 不支持      | 不支持      | 不支持      | 不支持           | 支持     | 特效。                   |
 | [image_lens_stretch](#image_lens_stretch)   | 支持     | 支持     | 不支持      | 不支持           | 支持     | 运动效果。               |
-| audio_volumes   | 支持     | 不支持     | 支持      | 不支持           | 不支持     | 音量调整               |
+| audio_volumes   | 支持     | 不支持     | 支持      | 不支持           | 不支持     | 音量调整。               |
 
 基础示例：
 ```js
