--- a/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/获取图片基本信息.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/获取图片基本信息.md
@@ -1,6 +1,11 @@
 ## 功能概述
-腾讯云数据万象通过 **imageInfo** 接口查询图片基本信息，包括格式、长、宽等。处理图片原图大小不超过32MB、宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素；针对动图，原图宽 x 高 x 帧数不超过2.5亿像素。
+腾讯云数据万象通过 **imageInfo** 接口查询图片基本信息，包括格式、长、宽等。
 
+### 使用限制
+
+- 待处理的图片，原图大小不超过32MB。
+- 宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素。
+- 针对动图，原图宽 x 高 x 帧数不超过2.5亿像素。
 
 ## 接口示例
 
@@ -10,11 +15,25 @@ download_url?imageInfo
 
 ## 处理参数说明
 
+#### 请求参数
+
 **操作名称**：imageInfo。
 
 | 参数         | 含义                                                         |
 | ------------ | ------------------------------------------------------------ |
 | download_url | 文件的访问链接，具体构成为&lt;BucketName-APPID>.cos.&lt;Region>.myqcloud.com/&lt;picture name>，<br>例如 `examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/picture.jpeg` |
+
+#### 响应参数
+
+| 参数        | 含义                                      |
+| ----------- | ----------------------------------------- |
+| format      | 图片类型。例如 png、gif 等                  |
+| width       | 图片的宽度。单位为像素（px）              |
+| height      | 图片的高度。单位为像素（px）              |
+| size        | 图片的大小。单位为 Bytes                   |
+| md5         | 图片的 md5 值                               |
+| photo_rgb   | 图片的主色调。例如0x736246                |
+| frame_count | 图片的帧数。静态图为1，动图为对应的帧数 |
 
 ## 实际案例
 
