--- a/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/获取图片基本信息.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/获取图片基本信息.md
@@ -1,7 +1,7 @@
 ## 功能概述
 腾讯云数据万象通过 **imageInfo** 接口查询图片基本信息，包括格式、长、宽等。
 
-### 使用限制
+## 使用限制
 
 - 待处理的图片，原图大小不超过32MB。
 - 宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素。
