--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/获取图片基本信息.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/获取图片基本信息.md
@@ -4,7 +4,7 @@
 >! 图片处理功能为收费项，由数据万象收取，详细的计费说明请参见数据万象 [图片处理费用](https://cloud.tencent.com/document/product/460/58117)。
 >
 
-### 使用限制
+## 使用限制
 
 - 待处理的图片，原图大小不超过32MB。
 - 宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素。
