--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/限制图片大小.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/限制图片大小.md
@@ -1,6 +1,6 @@
 ## 功能概述
 
-COS 通过数据万象 **imageMogr2/size-limit** 接口可限制图片处理（例如缩放、压缩等）后的文件大小。
+对象存储通过数据万象 **imageMogr2/size-limit** 接口可限制图片处理（例如缩放、压缩等）后的文件大小。
 
 ## 接口示例
 
