--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/图片水印.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/图片水印.md
@@ -1,5 +1,5 @@
 ## 功能概述
-COS 通过数据万象 **watermark** 接口提供图片水印处理功能。目前水印图片必须指定为已存储于数据万象绑定（或新建）的存储桶中的图片。关于图片水印等图片基础处理的限制说明，请参见 [规则与限制](https://cloud.tencent.com/document/product/460/36620)。
+对象存储通过数据万象 **watermark** 接口提供图片水印处理功能。目前水印图片必须指定为已存储于数据万象绑定（或新建）的存储桶中的图片。关于图片水印等图片基础处理的限制说明，请参见 [规则与限制](https://cloud.tencent.com/document/product/460/36620)。
 
 该功能支持以下处理方式：
 
