--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/裁剪.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/裁剪.md
@@ -1,5 +1,5 @@
 ## 功能概述
-COS 通过数据万象接口 **imageMogr2** 提供裁剪功能，包括普通裁剪、缩放裁剪、内切圆裁剪、圆角裁剪和人脸智能裁剪。
+对象存储通过数据万象接口 **imageMogr2** 提供裁剪功能，包括普通裁剪、缩放裁剪、内切圆裁剪、圆角裁剪和人脸智能裁剪。
 
 该功能支持以下处理方式：
 
