--- a/product/安全服务/数据安全网关/操作指南/系统基本功能配置/配置邮件服务.md
+++ b/product/安全服务/数据安全网关/操作指南/系统基本功能配置/配置邮件服务.md
@@ -10,7 +10,7 @@
 3. 配置如下选项：
  - **发送邮件服务器地址（email）**：例如`smtp.qq.com`。
  - **发送用户名**：邮件账号。
- - **发送口令**：QQ、163、126邮箱需填写邮箱授权码，其他邮箱填写邮箱账号密码。配置授权码，QQ 邮箱请参见 [授权码帮助文档](https://service.mail.qq.com/cgi-bin/help?id=28&no=1001256&subtype=1)。163和126邮箱请参见 [授权码文档](http://help.163.com/14/0923/22/A6S1FMJD00754KNP.html)。
+ - **发送口令**：QQ、163、126邮箱需填写邮箱授权码，其他邮箱填写邮箱账号密码。配置授权码，QQ 邮箱请参见 [授权码帮助文档](https://service.mail.qq.com/cgi-bin/help?id=28&no=1001256&subtype=1)。
  - **确认发送口令**：确认邮件密码。
  - **接收方邮件地址**：填写用来接收测试邮件的邮件地址。
 ![](https://main.qcloudimg.com/raw/63671642270b0a352948c1a46aababa9.png)
