--- a/product/企业协同/腾讯会议/API 文档/开发者工具/接口联调流程.md
+++ b/product/企业协同/腾讯会议/API 文档/开发者工具/接口联调流程.md
@@ -63,4 +63,5 @@
 - X-TC-Signature 字段为必填字段，单击**获取签名**可获取签名。
 >!获取签名前，请先填写好账号信息、请求参数、请求体、X-TC-Timestamp 字段与 X-TC-Nonce 字段，否则生成的签名将无法通过调用 REST API 接口的签名验证过程。
 - AppId 字段为可选字段，当开发者输入账号信息后，账号信息中的 APPID 的值将自动同步填充到该位置，无需再次填写。
+- X-TC-Registered 字段为必填字段，企业用户在调用 API 时请求头部 X-TC-Registered 字段必须传入为1，才可获取会议列表。
 ![](https://main.qcloudimg.com/raw/dd593d6e791dba18fbae2184327482c8.png)
