--- a/product/安全服务/BGP 高防 IP/高防IP新版/DDoS高防IP（境外企业版）/操作指南/防护配置/水印防护.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/DDoS高防IP（境外企业版）/操作指南/防护配置/水印防护.md
@@ -6,7 +6,7 @@ DDoS 高防支持对业务端发出的报文增加水印防护，在您配置的
 >?此功能为额外付费功能，请 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 进行开通。
 
 ## 操作步骤
-1.  登录 [DDoS 高防 IP（境外企业版）](https://console.cloud.tencent.com/ddos/ddos-basic) 控制台 ，在左侧导航中，单击【防护配置】。
+1. 登录 [DDoS 高防 IP（境外企业版）](https://console.cloud.tencent.com/ddos/ddos-basic) 控制台 ，在左侧导航中，单击【DDoS 高防 IP】>【防护配置】。
 2.  在左边的列表选中高防 IP 的 ID，如“xxx.xx.xx.xx bgpip-000003n2”。
 ![](https://main.qcloudimg.com/raw/4a61f8d9a1b9e43b8352bd9b164c7a63.png)
 3. 在右侧卡片中单击“水印防护”卡片中的【设置】，进入水印防护页面。
