--- a/product/安全服务/BGP 高防 IP/高防IP新版/DDoS高防IP（境外企业版）/操作指南/防护配置/端口过滤.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/DDoS高防IP（境外企业版）/操作指南/防护配置/端口过滤.md
@@ -4,7 +4,7 @@ DDoS 高防支持针对访问 DDoS 高防的源流量，基于端口进行一键
 您需要成功 [购买 DDoS 高防 IP（境外企业版）](https://cloud.tencent.com/document/product/1014/56255)  ，并设置防护对象。
 
 ## 操作步骤
-1.	登录  [DDoS 高防 IP 控制台](https://console.cloud.tencent.com/ddos/antiddos-advanced/config/port) ，在左侧导航中，单击【DDoS 高防包】>【防护配置】。
+1. 登录 [DDoS 高防 IP（境外企业版）](https://console.cloud.tencent.com/ddos/ddos-basic) 控制台 ，在左侧导航中，单击【DDoS 高防 IP】>【防护配置】。
 2. 在左边的列表选中高防IP的 ID，如“bgpip-xxxxxx”。
 ![](https://main.qcloudimg.com/raw/7221960c88b710e540b51eabea7afe6d.png)
 3. 右侧卡片中单击“端口过滤”卡片中的【设置】，进入特征过滤页面。
