--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/子网/删除子网.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/子网/删除子网.md
@@ -6,7 +6,7 @@
 
 ## 操作步骤
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
-2. 在左侧目录中单击【子网】，进入管理页面。
+2. 在左侧目录中单击**子网**，进入管理页面。
 3. 在列表上方，选择需要删除的子网所在地域和私有网络。
 4. 在列表中，找到选择需要删除的子网所在行，单击操作列的**删除**，并单击**确定**即可。
 >?如果 VPC 中有 Redis 实例，在 Redis 实例销毁后，实例将被移入云数据库回收站中，此时 VPC 不能立即删除，您可在回收站中直接执行**立即线下**，或等待回收站中实例自动过期后，再删除 VPC 和子网。详情请参见[ 销毁实例](https://cloud.tencent.com/document/product/239/30898)。
