--- a/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/用户登出.md
+++ b/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/用户登出.md
@@ -10,7 +10,7 @@
 |Action|String|是|公共参数，本接口取值：AppKugouUserCommand|
 |KGCommand|String|是|子命令，本接口取值：user_logout|
 |DeviceId|String|是|设备Id 由产品ID和设备Name组成|
-|KugouParams|Object of [KugouParams_user_logout](https://cloud.tencent.com/document/product/1081/40780#KugouParams_user_logout)|是|子命令的参数|
+|KugouParams|Object of [KugouParams_user_logout](https://cloud.tencent.com/document/product/1081/40780#kugouparams_user_logout)|是|子命令的参数|
 
 ## 3. 输出参数
 |名称|类型|描述|
