--- a/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/新歌首发.md
+++ b/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/新歌首发.md
@@ -10,7 +10,7 @@
 |Action|String|是|公共参数，本接口取值：AppKugouUserCommand|
 |KGCommand|String|是|子命令，本接口取值：awesome_newsong|
 |DeviceId|String|是|设备Id 由产品ID和设备Name组成|
-|KugouParams|Object of [KugouParams_awesome_newsong](https://cloud.tencent.com/document/product/1081/40780#KugouParams_awesome_newsong)|是|子命令的参数|
+|KugouParams|Object of [KugouParams_awesome_newsong](https://cloud.tencent.com/document/product/1081/40780#kugouparams_awesome_newsong)|是|子命令的参数|
 
 ## 3. 输出参数
 |名称|类型|描述|
@@ -18,7 +18,7 @@
 |RequestId|String|公共参数，唯一请求ID，与入参相同，定位问题时，需提供该次请求的 RequestId。|
 |ErrorCode|Integer|请求返回的错误码，0为没有错误。|
 |ErrorMsg|String|请求返回的错误信息。|
-|Data|Object of [Data_awesome_newsong](https://cloud.tencent.com/document/product/1081/40780#Data_awesome_newsong)|返回结果|
+|Data|Object of [Data_awesome_newsong](https://cloud.tencent.com/document/product/1081/40780#data_awesome_newsong)|返回结果|
 
 ## 4. 示例
 #### 示例1
