--- a/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/用户登出.md
+++ b/product/物联网/物联网开发平台/应用开发指南/应用端 API/音乐服务/用户登出.md
@@ -18,7 +18,7 @@
 |RequestId|String|公共参数，唯一请求ID，与入参相同，定位问题时，需提供该次请求的 RequestId。|
 |ErrorCode|Integer|请求返回的错误码，0为没有错误。|
 |ErrorMsg|String|请求返回的错误信息。|
-|Data|Object of [Data_user_logout](https://cloud.tencent.com/document/product/1081/40780#Data_user_logout)|返回结果|
+|Data|Object of [data_user_logout](https://cloud.tencent.com/document/product/1081/40780#Data_user_logout)|返回结果|
 
 ## 4. 示例
 #### 示例1
