--- a/product/存储与CDN/日志服务/用户指南/日志分析/分析函数/日期和时间函数.md
+++ b/product/存储与CDN/日志服务/用户指南/日志分析/分析函数/日期和时间函数.md
@@ -181,7 +181,7 @@ time_series(time_column, interval, format, padding)
 
 **示例**
 
-按照一秒的时间粒度进行数据补全，查询和分析语句如下：
+按照2小时的时间粒度进行数据补全，查询和分析语句如下：
 ```
 * | select time_series(__TIMESTAMP__, '2h', '%Y-%m-%d %H:%i:%s', '0')  as time, count(*) as count group by time order by time limit 1000
 ```
