--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/启动 H5 人脸核身.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/启动 H5 人脸核身.md
@@ -9,7 +9,7 @@
 
 ## 生成签名
 ### 前置条件
-请合作方确保 NONCE ticket 已经正常获取，获取方式见 [NONCE ticket 获取](#_NONCE_ticket_获取)。合作方根据本次人脸核身的如下参数生成签名,需要签名的参数信息如下：
+请合作方确保 NONCE ticket 已经正常获取，获取方式见 [NONCE ticket 获取](https://cloud.tencent.com/document/product/1007/37306)。合作方根据本次人脸核身的如下参数生成签名,需要签名的参数信息如下：
 >?参与签名的数据需要和使用该签名的接口中的请求参数保持一致。
 
 | 参数        | 说明                                                         | 来源                                                         |
@@ -19,14 +19,14 @@
 | userId      | 用户 ID ，用户的唯一标识（不要带有特殊字符）      | 合作方自行分配（与接口中使用的 userId 保持一致）             |
 | version     | 参数值为：1.0.0                                              | -                                                            |
 | h5faceId    | h5/geth5faceid 接口返回的唯一标识                            | -                                                            |
-| api ticket  | 合作伙伴服务端获取的 tikcet，注意是 NONCE 类型       | 获取方式见 [NONCE ticket 获取](#_NONCE_ticket_获取)（所用的 userid 参数值需要和接口里面的 userId 值保持一致） |
+| api ticket  | 合作伙伴服务端获取的 tikcet，注意是 NONCE 类型       | 获取方式见 [NONCE ticket 获取](https://cloud.tencent.com/document/product/1007/37306)（所用的 userid 参数值需要和接口里面的 userId 值保持一致） |
 | nonce       | 随机数：32位随机串（字母 + 数字组成的随机数）       | 合作方自行生成（与接口中的随机数保持一致）     |
 
 ### 基本步骤
 1. 生成一个32位的随机字符串（字母和数字）nonce（接口请求时也要用到）。
 2. 将 webankAppId、userId、orderNo、version、h5faceId 连同 ticket、nonce 共7个参数的值进行字典序排序。
 3. 将排序后的所有参数字符串拼接成一个字符串。
-4. 将排序后的字符串进行 SHA1 编码，编码后的40位字符串作为签名（sign）。签名算法可参考 [签名算法说明 ](#_签名算法说明)。
+4. 将排序后的字符串进行 SHA1 编码，编码后的40位字符串作为签名（sign）。签名算法可参考 [签名算法说明 ](https://cloud.tencent.com/document/product/1007/37307)。
 
 ### 参考示例
 **请求参数：**
