--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
@@ -19,7 +19,7 @@
 <tr>
 <td rowspan="3">iOS</td>
 <td>APP</td>
-<td>在客户自有 APP 中使用，适用于在客户 APP 中触达用户的业务场景</td>
+<td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
 <td> iOS 系统版本 14.3+  需按照兼容性配置指引做适配</td>
 <td>90%</td>
 </tr>
@@ -38,7 +38,7 @@
 <tr>
 <td rowspan="3">Android</td>
 <td>APP</td>
-<td>在客户自有 APP 中使用，适用于在客户 APP 中触达用户的业务场景</td>
+<td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
 <td> Android 系统版本 7+ 需按照兼容性配置指引做适配</td>
 <td>75%</td>
 </tr>
@@ -63,12 +63,12 @@
  - 请参考接入文档接入调试。
  - 联系商务或技术支持人员，配置实时检测模式。
 - 已接入视频录制模式的客户：
- - 如是 APP 调用，请按照兼容性配置指引做适配。
+ - 如是 App 调用，请按照兼容性配置指引做适配。
  - 联系商务或技术支持人员，配置实时检测模式。
 
 
 ## 相关参考文档
-合作方后台上送身份信息
-启动 H5 人脸核身
-H5 人脸核身结果跳转
-人脸核身 APP 调用 H5 兼容性配置指引
+[合作方后台上送身份信息](https://cloud.tencent.com/document/product/1007/61073)
+[启动 H5 人脸核身](https://cloud.tencent.com/document/product/1007/61074)
+[H5 人脸核身结果跳转](https://cloud.tencent.com/document/product/1007/61075)
+[人脸核身 App 调用 H5 兼容性配置指引](https://cloud.tencent.com/document/product/1007/61076)
