--- a/product/域名与网站/域名注册/域名注册商资质升级说明.md
+++ b/product/域名与网站/域名注册/域名注册商资质升级说明.md
@@ -1,5 +1,5 @@
 ## 操作场景
-域名注册商升级服务是指原腾讯云代理新网资质域名转⼊腾讯云当前自有资质的域名转入过程。您可通过【[域名注册管理控制台](https://console.cloud.tencent.com/domain)】续费入口查看当前域名是否符合注册商升级资质要求，已为腾讯云自有资质的域名无需升级。
+域名注册商升级服务是指原腾讯云代理新网资质域名转⼊腾讯云当前自有资质的域名转入过程。您可通过 [域名注册管理控制台](https://console.cloud.tencent.com/domain) 续费入口查看当前域名是否符合注册商升级资质要求，已为腾讯云自有资质的域名无需升级。
 
 
 ## 前提条件
@@ -16,16 +16,16 @@
 
 ## 操作步骤
 1. 登录 [域名注册管理控制台](https://console.cloud.tencent.com/domain)。
-2. 选择需要进行资质升级的域名，并单击【续费】。
+2. 选择需要进行资质升级的域名，并单击**续费**。
 3. 在弹出的 “续费” 窗口中，单击<span ><img src="https://main.qcloudimg.com/raw/ce844f426842c9ae41963f5d3bc4f4c0.png" style="margin-bottom:-5px;"/></span>开启升级注册商。如下图所示：
 ![](https://main.qcloudimg.com/raw/bd458e60d5ce5797b62f4dcbf163b01c.png)
-4. 单击【下一步】，完成支付操作，即可完成资质升级操作。
+4. 单击**下一步**，完成支付操作，即可完成资质升级操作。
 
 ## 相关说明
-域名注册商升级服务与域名转入服务均为注册商之间的转移，因此升级过程需满足【域名转入】相关条件，对应注册商升级条件如下：
+域名注册商升级服务与域名转入服务均为注册商之间的转移，因此升级过程需满足**域名转入**相关条件，对应注册商升级条件如下：
 - 注册未满60天的新网资质域名无法进行升级。
 - .name、.pw、.org 、.co、.hk、.la、.me、.so 的新网资质域名暂不支持注册商升级。
-- 域名注册商升级时，请确认域名状态正常，已关闭【禁止转移锁】或注册局安全锁等服务，否则无法进行注册商升级服务。
+- 域名注册商升级时，请确认域名状态正常，已关闭**禁止转移锁**或注册局安全锁等服务，否则无法进行注册商升级服务。
 - 未通过命名审核的域名不支持升级。
 - 域名处于赎回状态时无法操作，如需升级请先对域名进行赎回操作。
 - 域名注册商升级过程中需关联域名实名信息模板，如当前操作账号未存在已通过的实名信息模板，则可通过新建后选择关联提交。新建域名信息模板请参考 [信息模板管理](https://cloud.tencent.com/document/product/242/15435)。（如升级过程中域名信息模板未通过审核，为避免影响域名正常使用，请在升级成功后尽快提交实名认证）。
