--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
@@ -18,7 +18,7 @@
 </tr>
 <tr>
 <td rowspan="3">iOS</td>
-<td>APP</td>
+<td>App</td>
 <td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
 <td> iOS 系统版本 14.3+  需按照兼容性配置指引做适配</td>
 <td>90%</td>
