--- a/product/域名与网站/域名注册/产品规则/60天内禁止转移注册商锁定.md
+++ b/product/域名与网站/域名注册/产品规则/60天内禁止转移注册商锁定.md
@@ -1,8 +1,8 @@
-根据国际互联网域名与地址管理机构（ICANN）的 [转让政策](https://www.icann.org/resources/pages/transfer-policy-2017-05-23-zh?spm=a2c4g.11186623.2.16.44304fba8YVhiO) 规定，修改域名信息过程中**勾选【开启 "60天内禁止转移注册商锁定"】**，60天内将禁止域名从当前接入商转出。
+根据国际互联网域名与地址管理机构（ICANN）的 [转让政策](https://www.icann.org/resources/pages/transfer-policy-2017-05-23-zh?spm=a2c4g.11186623.2.16.44304fba8YVhiO) 规定，修改域名信息过程中**勾选开启 "60天内禁止转移注册商锁定"**，60天内将禁止域名从当前接入商转出。
 >!
->- 如您需将域名转出腾讯云，在进行以下操作时，请**勿勾选【开启 "60天内禁止转移注册商锁定"】**，否则域名将在信息变更后60天无法转出。
-- 如在域名转入时，未勾选【开启 “60天内禁止转移注册商锁定”】，则可在域名转入成功60天后进行域名转出等操作。
-- 如在域名转入时，勾选【开启 “60天内禁止转移注册商锁定”】，且在域名转入60天锁定期内修改域名持有者信息，则需要在域名持有者信息修改成功60天后才可进行域名转出等操作。
+>- 如您需将域名转出腾讯云，在进行以下操作时，请**勿勾选开启 "60天内禁止转移注册商锁定"**，否则域名将在信息变更后60天无法转出。
+- 如在域名转入时，**未勾选开启 “60天内禁止转移注册商锁定”**，则可在域名转入成功60天后进行域名转出等操作。
+- 如在域名转入时，**勾选开启 “60天内禁止转移注册商锁定”**，且在域名转入60天锁定期内修改域名持有者信息，则需要在域名持有者信息修改成功60天后才可进行域名转出等操作。
 
 | 操作 | 相关文档 | 
 |---------|---------|
