--- a/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
@@ -1,5 +1,5 @@
 ### 什么是威胁情报云查服务？
-威胁情报云查服务是一套 SaaS 化的云端 API 接口。其主要依托腾讯在近二十年的网络安全工作中积累的安全经验和大数据情报。其中包含威胁情报（IoC）查询服务、IP 、Domain、文件等信誉查询服务。
+威胁情报云查服务是一套 SaaS 化的云端 API 接口。腾讯云威胁情报云查服务主要是依托腾讯安全在近二十年的网络安全工作中积累的安全经验和情报大数据。其中包含 IP/Domain/文件/URL 信誉查询和 IP/Domain 高精准 IOC 查询服务。
 
 
 ### 如何使用威胁情报云查服务？
