--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 <td rowspan="3">Android</td>
-<td>APP</td>
+<td>App</td>
 <td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
 <td> Android 系统版本 7+ 需按照兼容性配置指引做适配</td>
 <td>75%</td>
