--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
@@ -20,38 +20,38 @@
 <td rowspan="3">iOS</td>
 <td>App</td>
 <td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
-<td> iOS 系统版本 14.3+  需按照兼容性配置指引做适配</td>
+<td> iOS 系统版本14.3+，需按照兼容性配置指引做适配</td>
 <td>90%</td>
 </tr>
 <tr>
 <td>公众号</td>
 <td>在微信公众号中使用，适用于在微信中触达用户的业务场景</td>
-<td>iOS 系统版本14.3+  微信版本6.5+</td>
+<td>iOS 系统版本14.3+，微信版本6.5+</td>
 <td>95%</td>
 </tr>
 <tr>
 <td>浏览器</td>
 <td>在手机浏览器使用，适用于通过短信或其他方式发送链接触达用户的业务场景</td>
-<td> iOS 系统版本11.1.2+  支持 Safari 浏览器，浏览器版本11+</td>
+<td> iOS 系统版本11.1.2+，支持 Safari 浏览器，浏览器版本11+</td>
 <td>100%</td>
 </tr>
 <tr>
 <td rowspan="3">Android</td>
 <td>App</td>
 <td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
-<td> Android 系统版本7+ 需按照兼容性配置指引做适配</td>
+<td> Android 系统版本7+，需按照兼容性配置指引做适配</td>
 <td>95%</td>
 </tr>
 <tr>
 <td>公众号</td>
 <td>在微信公众号中使用，适用于在微信中触达用户的业务场景</td>
-<td>Android 系统版本7+ 微信版本6.5+</td>
+<td>Android 系统版本7+，微信版本6.5+</td>
 <td>95%</td>
 </tr>
 <tr>
 <td>浏览器</td>
 <td>在手机浏览器使用，适用于通过短信或其他方式发送链接触达用户的业务场景</td>
-<td>Android 系统版本7+ 支持 QQ 浏览器，不支持 UC、百度浏览器</td>
+<td>Android 系统版本7+，支持 QQ 浏览器，不支持 UC、百度浏览器</td>
 <td>100%</td>
 </tr>
 </table>
