--- a/product/域名与网站/域名注册/域名服务/域名转入.md
+++ b/product/域名与网站/域名注册/域名服务/域名转入.md
@@ -5,9 +5,9 @@
 将域名从其他域名注册商转到腾讯云域名服务内，转移过程大约需要**5 - 7**个工作日，由腾讯云为您继续提供域名服务，我们称之为域名转入。
 
 ## [相关信息](id:message)
-根据国际互联网域名与地址管理机构（ICANN）的 [转让政策规定](https://www.icann.org/resources/pages/transfer-policy-2017-05-23-zh?spm=a2c4g.11186623.2.16.44304fba8YVhiO)，修改域名信息过程中勾选【开启 “60天禁止转移注册商锁定期”】，60天内将禁止域名从当前接入商转出。
-- 如在域名转入时，未勾选【开启 “60天内禁止转移注册商锁定”】，则可在域名转入成功60天后进行域名转出等操作。
-- 如在域名转入时，勾选【开启 “60天内禁止转移注册商锁定”】，且在域名转入60天锁定期内修改域名持有者信息，则需要在域名持有者信息修改成功60天后才可进行域名转出等操作。
+根据国际互联网域名与地址管理机构（ICANN）的 [转让政策规定](https://www.icann.org/resources/pages/transfer-policy-2017-05-23-zh?spm=a2c4g.11186623.2.16.44304fba8YVhiO)，修改域名信息过程中**勾选开启 “60天禁止转移注册商锁定期”**，60天内将禁止域名从当前接入商转出。
+- 如在域名转入时，**未勾选开启 “60天内禁止转移注册商锁定”**，则可在域名转入成功60天后进行域名转出等操作。
+- 如在域名转入时，**勾选开启 “60天内禁止转移注册商锁定”**，且在域名转入60天锁定期内修改域名持有者信息，则需要在域名持有者信息修改成功60天后才可进行域名转出等操作。
 
 ## [前提条件](id:preconditions)
 域名转入是注册商之间的转移，腾讯云域名的转入条件如下：
@@ -48,12 +48,12 @@
 
 1. 登录腾讯云 [域名注册控制台](https://console.cloud.tencent.com/domain/)，进入 “我的域名” 页面。
 3. 在左侧导航中，选择 “域名转入”，进入 “我的转入” 页面。
-4. 单击【域名转入】，进入域名转入流程。
+4. 单击**域名转入**，进入域名转入流程。
 
 ### 域名转入步骤
 
-1. 请根据页面提示，填写信息并勾选相关协议，单击【提交】。如下图所示：
->!根据 ICANN 相关规定，为保护您的域名安全，修改域名信息过程中勾选【开启 "60天禁止转移注册商锁定期"】，60天内将禁止域名从当前接入商转出。如需转出域名，**请勿勾选【开启 "60天禁止转移注册商锁定期"】**。详情请查看 [相关信息](#message)。
+1. 请根据页面提示，填写信息并勾选相关协议，单击**提交**。如下图所示：
+>!根据 ICANN 相关规定，为保护您的域名安全，修改域名信息过程中**勾选开启 "60天禁止转移注册商锁定期"**，60天内将禁止域名从当前接入商转出。如需转出域名，**请勿勾选开启 "60天禁止转移注册商锁定期"**。详情请查看 [相关信息](#message)。
 >
 ![域名转入](https://main.qcloudimg.com/raw/4ffcf4c53df5e6c95c0537bac39fe2db.png)
   - 域名和转移密码：根据实际需求，进行填写。
@@ -62,13 +62,13 @@
 <dx-alert infotype="explain" title="">
 开启自动续费后，若您需要关闭自动续费，可在 [域名列表](https://console.cloud.tencent.com/domain/) 中进行关闭操作。
 </dx-alert>
-2. 转入需要您将域名续费一年，生成转入订单，单击【去支付】后按流程完成付款。如下图所示：
+2. 转入需要您将域名续费一年，生成转入订单，单击**去支付**后按流程完成付款。如下图所示：
 ![](https://main.qcloudimg.com/raw/906e5d6be733ab41a4f7bc7e434b974d.png)
-3. 支付成功后，您可以返回控制台，选择【我的域名】>【待转入】，可查看您待转入的域名状态。如下图所示：
+3. 支付成功后，您可以返回控制台，选择**我的域名 > 待转入**，可查看您待转入的域名状态。如下图所示：
 >!
 >- 域名转入时间一般需要**5 - 7**个工作日，转入时间取决于相关注册局的处理时间，请您耐心等待。
 >- 域名转入成功后，为方便您及时了解，腾讯云将发送短信至您账号绑定的手机号或发送邮件至您绑定的邮箱。
->- 若您需要取消转入，请单击【取消转入】。相关说明可参考 [如何取消域名转入](https://cloud.tencent.com/document/product/242/18610#.E5.A6.82.E4.BD.95.E5.8F.96.E6.B6.88.E5.9F.9F.E5.90.8D.E8.BD.AC.E5.85.A5.EF.BC.9F)。
+>- 若您需要取消转入，请单击**取消转入**。相关说明可参考 [如何取消域名转入](https://cloud.tencent.com/document/product/242/18610#.E5.A6.82.E4.BD.95.E5.8F.96.E6.B6.88.E5.9F.9F.E5.90.8D.E8.BD.AC.E5.85.A5.EF.BC.9F)。
 >
 ![](https://main.qcloudimg.com/raw/848795cb2742e4c493bb53a7a0fffcef.png)
 
