--- a/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
@@ -3,7 +3,7 @@
 
 
 ### 如何使用威胁情报云查服务？
-1. 目前威胁情报云查服务暂不支持线上购买，如需购买使用，请线下 [联系我们](https://cloud.tencent.com/act/event/connect-service) 进行洽谈。
+1. 进入 [申请页面](https://cloud.tencent.com/apply/p/vyos0xdn299)，申请使用威胁情报云查服务，或线下 [联系我们](https://cloud.tencent.com/act/event/connect-service) 进行洽谈。
 2. 我们将给您发送相应的 AppID、SecretID 和 SecretKey。
 3. 使用您的  AppID、SecretID 和 SecretKey 来调用相应的端口。
 
