--- a/product/视频服务/移动直播/SDK下载与集成/版本历史.md
+++ b/product/视频服务/移动直播/SDK下载与集成/版本历史.md
@@ -1,6 +1,6 @@
 ### Version 9.1 @ 2021.09.02
 - iOS&Android：V2 新增支持设置帧率和码率。
-- iOS&Android；V2 新增拉无效流时失败状态回调。
+- iOS&Android：V2 新增拉无效流时失败状态回调。
 - Mac&Windows：V2 新增音视频外设热插拔回调。
 - Android&iOS：移动直播新增支持 H265 编码。
 - Android：优化特定条件下视频画面过曝的问题。
