--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/启动 H5 人脸核身.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/启动 H5 人脸核身.md
@@ -81,7 +81,7 @@ optimalDomain 使用 [合作方后台上送身份信息](https://cloud.tencent.c
 | resultType   | 是否显示结果页面，参数值为“1”时直接跳转到 url 回调地址，null 或其他值跳转提供的结果页面 | String | -    | 否，非必填 |
 | userId       | 用户 ID ，用户的唯一标识（不要带有特殊字符）                 | String | -    | 是         |
 | sign         | 签名：使用上面生成的签名                                   | String | 40   | 是         |
-| from         | browser：表示在浏览器启动刷脸；app：表示在 app 里启动刷脸，默认值为 app | String | -    | 是         |
+| from         | browser：表示在浏览器启动刷脸；App：表示在 App 里启动刷脸，默认值为 App | String | -    | 是         |
 | redirectType | 跳转模式，参数值为“1”时，刷脸页面使用 replace 方式跳转，不在浏览器 history 中留下记录；不传或其他值则正常跳转 | String | -    | 否，非必填 |
 
 **请求示例：**
