--- a/product/域名与网站/域名注册/新购续费/域名交易/提交域名经纪需求.md
+++ b/product/域名与网站/域名注册/新购续费/域名交易/提交域名经纪需求.md
@@ -3,9 +3,9 @@
 
 ## 操作步骤
 1. 登录 DNSPod [域名交易管理控制台](https://console.dnspod.cn/transaction/buyer/broker)。
-2. 选择【我的经纪交易】页签，进入 “我的经纪交易” 管理页面。如下图所示：
+2. 选择**我的经纪交易**页签，进入 “我的经纪交易” 管理页面。如下图所示：
 ![](https://main.qcloudimg.com/raw/536fd5909782aefcc5e4c61cf4210e98.png)
-3. 单击【提交经纪需求】，进入 “提交需求” 管理页面，输入相关信息，以确保域名经纪人能够联系到您。如下图所示：
+3. 单击**提交经纪需求**，进入 “提交需求” 管理页面，输入相关信息，以确保域名经纪人能够联系到您。如下图所示：
 ![](https://main.qcloudimg.com/raw/9e3238375f22ff83a1f67ee5a50996e9.png)
  - **域名**：请输入您需要购买的域名。
  - **联系人**：请输入您的称谓。
@@ -13,7 +13,7 @@
  - **其他联系方式**：可选，可输入您的其他联系方式。例如微信、QQ、邮箱等。
  - **预算**：请输入您购买该域名的预算价格，最小不可低于2000。
  - **具体需求描述**：可选，可输入您的具体需求。
-4. 勾选 “我已阅读并同意《腾讯云（DNSPod）域名交易服务条款》”，单击【提交需求】，即可进入 “确认接单” 管理页面。如下图所示：
+4. 勾选 “我已阅读并同意《腾讯云（DNSPod）域名交易服务条款》”，单击**提交需求**，即可进入 “确认接单” 管理页面。如下图所示：
 ![](https://main.qcloudimg.com/raw/f35c9f9543051647163788185dcb0e70.png)
 5. 在 “确认接单” 管理页面，请您耐心等待域名经纪人确认需求。
 >?
