--- a/product/数据库/数据传输服务DTS/产品动态.md
+++ b/product/数据库/数据传输服务DTS/产品动态.md
@@ -3,6 +3,14 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
+<td>支持自定义路由策略</td>
+<td>MySQL订阅支持自定义数据字段路由到Kafka分区。 </td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/571/52412" target="_blank">创建数据订阅任务</a></td></tr><tr>
+<td>支持 TDSQL-C 数据同步</td>
+<td>支持 TDSQL-C 数据同步至 TDSQL-C。 </td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/571/59962" target="_blank">TDSQL-C 数据同步至 TDSQL-C</a></td></tr><tr>
 <td>支持默认告警策略</td>
 <td>支持对数据迁移、数据同步、数据订阅中的重要事件监控进行默认配置，事件触发后及时通知用户。 </td>
 <td>2021-07</td>
