--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/微信 HTML5 接入/微信原生H5及小程序所需资质文件列表.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/微信 HTML5 接入/微信原生H5及小程序所需资质文件列表.md
@@ -14,7 +14,10 @@
       <td>（2选1）：<br>1、公立学校：由教育行政部门出具的审批设立证明或《事业单位法人证书》。<br>2、私立学校：《民办学校办学许可证》及营业执照。</td>
      </tr> 
   <tr>      
-        <td rowspan="2">医疗</td>   
+        <td rowspan="3">医疗</td>
+				<td>公立医疗机构</td>   
+      <td>《医疗机构执业许可证》与《事业单位法人证书》。</td>   
+			<tr>
       <td>互联网医院</td>   
       <td>仅支持公立医疗机构互联网医院（2选1）：<br>1、卫生健康部门的《设置医疗机构批准书》。<br>2、 合作医院的《医疗机构执业许可证》与执业登记机关的审核合格文件。</td>   
      </tr> 
