--- a/product/视频服务/实时音视频/购买指南/折扣活动.md
+++ b/product/视频服务/实时音视频/购买指南/折扣活动.md
@@ -1,56 +1,40 @@
 ## 活动1：【100+份壕礼等你拿】腾讯云音视频邀您有奖测评
-
 ### 活动详情
 云直播、云点播、实时音视频、即时通信4大产品同步测评，在线留言上墙和提交测评报告两大玩法，赢取大疆 FPV 无人机套装，iPhone 12 mini，Switch 游戏机等逾5万元大奖！[单击参与](https://cloud.tencent.com/act/pro/video_exp?from=14877)。
-
 ### 活动对象
-
 腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外）。
 
+
 ## 活动2：【免费试用】新用户免费领取实时音视频套餐包
-
 ### 活动详情
-
 新用户首次开通可免费领取1万分钟实时音视频套餐包，企业新用户开通免费再领2.5万分钟，[单击体验](https://cloud.tencent.com/act/pro/video_freetrial?from=14867)。
-
 ### 活动对象
-
 腾讯云官网已注册的国内站新用户均可参与（协作者与子用户账号除外）。
 
-## 活动3：【促销优惠】9.9元享2万分钟 TRTC 通用时长
 
+## 活动3：【首购优惠】9.9元享2万分钟 TRTC 通用时长
 ### 活动详情
-
 1分钟跑通 Demo，30分钟构建语音通话、视频通话、互动直播；TRTC 致力于帮助开发者快速搭建低成本、低延时、高品质的音视频互动解决方案，[单击前往](https://cloud.tencent.com/act/pro/trtccx?from=14556)。
-
 ### 活动对象
+腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外），限新用户首次购买一件。
 
-活动参与对象需完成账号实名才可以参与购买（协作者不可购买），不对新老客户作出限制。
 
 ## 活动4：【低至4元/千分钟】实时音视频·企业首单秒杀
-
 ### 活动详情
-
 面向 TRTC 企业新用户提供2.5万分钟，25万分钟，100万分钟三种规格首单优惠，低至4元/千分钟，[单击抢购](https://cloud.tencent.com/act/new?from=14591#enterprise-trtc)。
-
 ### 活动对象
-
 腾讯云官网已注册的国内站企业认证用户均可参与（协作者与子用户账号除外）。
 
+
 ## 活动5：【解决方案】TRTC 重磅发布语聊低代码开发解决方案
-
 ### 活动详情
-
 主打多人音视频通话和低延时互动直播两大场景化方案，提供 IM + TRTC 开发的仿 ClubHouse App 的场景化解决方案，并将源码开源，可快速上线，[单击了解详情](https://cloud.tencent.com/act/pro/TRTC_CH?from=14592)。
-
 ### 活动对象
-
 腾讯云官网已注册的国内站用户均可参与（协作者与子用户账号除外）。
 
+
 ## 活动6：【免费扶持资源】音视频创新成长专线
-
 ### 活动详情
-
 面向探索音视频领域的团队，提供100万分钟 TRTC 免费时长及云上一站式扶持，助力搭建音视频应用，[单击申请扶持](https://cloud.tencent.com/act/pro/trtc_startup?from=14559)。
 
 
