--- a/product/域名与网站/域名注册/域名续费/域名自动续费.md
+++ b/product/域名与网站/域名注册/域名续费/域名自动续费.md
@@ -12,9 +12,9 @@
 ## 操作步骤
 
 1. 登录腾讯云 [域名注册控制台](https://console.cloud.tencent.com/domain/)，进入 “我的域名” 管理页面。
-2. 在需要设置自动续费域名行中，单击【开启】或单击 【更多】，选择【开启自动续费】。如下图所示：
+2. 在需要设置自动续费域名行中，单击**开启**或单击**更多**，选择**开启自动续费**。如下图所示：
 ![自动续费](https://main.qcloudimg.com/raw/6f52b5397c21cc49cef36972c229436d.png)
-3. 核对您的域名续费信息及费用，单击【确定】。完成开启自动续费功能。如下图所示：
+3. 核对您的域名续费信息及费用，单击**确定**。完成开启自动续费功能。如下图所示：
 ![](https://main.qcloudimg.com/raw/a1a86185d8102e239c53ce230279c5e2.png)
 
 
