--- a/product/域名与网站/域名注册/域名服务/域名账号间过户.md
+++ b/product/域名与网站/域名注册/域名服务/域名账号间过户.md
@@ -12,13 +12,13 @@
 ## 操作步骤
 
 1. 登录腾讯云 [域名注册控制台](https://console.cloud.tencent.com/domain)，进入 “我的域名” 页面，查看已购买的所有域名信息。
-2. 在待转移的域名行中，单击【管理】。如下图所示：
+2. 在待转移的域名行中，单击**管理**。如下图所示：
 ![](https://main.qcloudimg.com/raw/8ffd31bf9e778f7b03055f506acea7f4.png)
-3. 进入 “域名信息” 页面，选择【域名转移】页签，在 “账号间转移” 处单击【转移】。如下图所示：
+3. 进入 “域名信息” 页面，选择**域名转移**页签，在 “账号间转移” 处单击**转移**。如下图所示：
 ![](https://main.qcloudimg.com/raw/17dc7b6566f85a46d944577859502b08.png)
-4. 在弹出的 “身份验证” 窗口中，获取并填写短信验证码，单击【确定】。如下图所示：
+4. 在弹出的 “身份验证” 窗口中，获取并填写短信验证码，单击**确定**。如下图所示：
 ![](https://main.qcloudimg.com/raw/e5d712ca5d1d9807d43f0e3a00e8c8c9.png)
-5. 在 “账号间转移” 页面，确认相关信息，并输入待转移的账号 ID，单击【确认】>【下一步】。如下图所示：
+5. 在 “账号间转移” 页面，确认相关信息，并输入待转移的账号 ID，单击**确认 > 下一步**。如下图所示：
 ![](https://main.qcloudimg.com/raw/e5ed11438fe64fdc5e29d62396eb8590.png)
  - **转移域名**：请确认您需要转移的域名是否正确。
  - **指定账号**：
@@ -28,7 +28,7 @@
 <ul><li>勾选后，则将对应的 DNS 解析域名管理权限转移至对方账号，如有解析套餐也将一并转移，<b>该操作不可撤回</b>。</li>
 <li>如当前账号下无该 DNS 解析域名，则不进行转移。具体可查看 <a href ="https://console.dnspod.cn/dns/list">DNS 解析列表</a>。</li></ul>
 </dx-alert>
-6. 在弹出的 “转移信息确认” 窗口中，确认您需要转移的账号 ID 以及账号昵称，并单击【确定】，即可转移成功。如下图所示：
+6. 在弹出的 “转移信息确认” 窗口中，确认您需要转移的账号 ID 以及账号昵称，并单击**确定**，即可转移成功。如下图所示：
 ![](https://main.qcloudimg.com/raw/f0d436bc8324a0f09df766f13e223174.png)
 7. 请登录新账号，即可查看该域名。
 
