--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/H5 接入（实时检测模式）/H5 实时检测人脸核身介绍.md
@@ -20,7 +20,7 @@
 <td rowspan="3">iOS</td>
 <td>App</td>
 <td>在客户自有 App 中使用，适用于在客户 App 中触达用户的业务场景</td>
-<td> iOS 系统版本14.3+，需按照 [兼容性配置指引](https://cloud.tencent.com/document/product/1007/61076) 做适配</td>
+<td> iOS 系统版本14.3+，需按照需按照 <a href="https://cloud.tencent.com/document/product/1007/61076">兼容性配置指引</a> </td>
 <td>90%</td>
 </tr>
 <tr>
