--- a/product/计算与网络/事件总线/事件规则/事件目标投递.md
+++ b/product/计算与网络/事件总线/事件规则/事件目标投递.md
@@ -1,7 +1,7 @@
 通过事件规则，您可以将收集到的事件投递到指定的投递目标完成处理与消费，目前事件总线支持 [腾讯云云函数](https://cloud.tencent.com/product/scf) 作为投递目标，并提供了多个预设模版，帮助您完成事件的投递。
 
 ### 模版函数投递
-选择函数模版，事件总线将根据提供的默认模版，为您创建一个目标函数，完成事件投递。目前，提供了 Ckafka 投递与 EIS 投递两个函数模版，您可以在【事件规则】>【事件目标】里进行选择与配置。
+选择函数模版，事件总线将根据提供的默认模版，为您创建一个目标函数，完成事件投递。目前，提供了 Ckafka 投递与 EIS 投递两个函数模版，您可以在**事件规则** > **事件目标**里进行选择与配置。
 <dx-tabs>
 ::: Ckafka 投递模版
 
