--- a/product/大数据与AI/文字识别/购买指南/计费概述.md
+++ b/product/大数据与AI/文字识别/购买指南/计费概述.md
@@ -16,7 +16,7 @@
 
 ### 预付费
 
-预付费资源包支持多种规格，有效期均为1年，1年内若资源包次数未使用完，则过期作废；预付费资源包使用后不支持剩余次数冻结，若购买后未使用，支持7天内无理由退款。文字识别资源包刊例价如下表所示，如需购买或查看活动折扣价格，请单击 [购买资源包](https://buy.cloud.tencent.com/iai_ocr) 。
+预付费资源包支持多种规格，有效期均为1年，1年内若资源包次数未使用完，则过期作废；预付费资源包使用后不支持剩余次数冻结，若购买后未使用，支持7天内无理由退款。文字识别资源包**刊例价**如下表所示，**如需购买或查看活动折扣价格，请单击** [购买资源包](https://buy.cloud.tencent.com/iai_ocr) 。
 
 <table >
 <tr>
