--- a/product/企业应用/企业集成服务/快速入门/微连接入门体验.md
+++ b/product/企业应用/企业集成服务/快速入门/微连接入门体验.md
@@ -3,7 +3,7 @@
 
 ## 操作步骤
 ### 步骤1：创建微连接
-登录企业集成控制台，单击**微连接 > 创建微连接**，进入微连接创建页面。  
+登录 [企业集成服务控制台](https://cloud.tencent.com/login?s_url=https%3A%2F%2Fconsole.cloud.tencent.com/eis)，单击**微连接 > 创建微连接**，进入微连接创建页面。  
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/1.png)
 
 ### 步骤2：选择触发应用
@@ -17,7 +17,7 @@
  1. 选择触发应用：在创建微连接时已选择。  
  2. 选择触发事件：在选择执行操作栏选择**接收问卷消息**，当腾讯问卷接收到新的问卷信息时触发微连接，单击**下一步**。   
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/3.png)
-2. 选择应用账号：在腾讯问卷账号下拉栏处单击**添加账号**，已添加过的账号可以直接选中使用，尚未添加过的账号需要单击**立即添加账号**进入授权/配置页面。   
+2. 选择应用账号：在腾讯问卷账号下拉栏处单击进行账号添加，已添加过的账号可以直接选中使用，尚未添加过的账号需要单击**立即添加账号**进入授权/配置页面。   
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/4.png)
  1. 三方应用有单独的平台用户服务协议，单击**我已阅读并同意**后即可跳转到扫码登录页面。 
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/5.png)
@@ -47,27 +47,26 @@
 ![](https://main.qcloudimg.com/raw/a6d6133c2ee892f3797783426d8c56f0.png)
 3. 设置应用参数：配置从腾讯问卷收集的信息写入到销售易销售线索中，可拉取腾讯问卷节点的返回值即可，并单击**下一步**进入测试功能。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/21.png)
-4. 测试应用：单击**下一步>测试**，测试成功会返回测试成功字样及选中的线索字段。若测试失败，则会返回测试失败字样及测试失败的具体原因，您可以参考原因进行解决。测试步骤完成后，配置执行应用完成。  
+4. 测试应用：单击**下一步 > 测试**，测试成功会返回测试成功字样及选中的线索字段。若测试失败，则会返回测试失败字样及测试失败的具体原因，您可以参考原因进行解决。测试步骤完成后，配置执行应用完成。  
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/22.png)
 
 #### 销售易账号授权获取方式
 1. 登录 [销售易](https://login.xiaoshouyi.com)。 
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/12.png) 
 2. 获取客户端 ID、客户端密钥、授权回调地址：
- 1. 在左侧导航栏底部单击**设置>系统设置**进入系统后台。
+ 1. 在左侧导航栏底部单击**设置 > 系统设置**进入系统后台。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/13.png)
- 2. 在左侧导航栏中，单击**开发者平台>连接器**进入连接器管理页面。
+ 2. 在左侧导航栏中，单击**开发者平台 > 连接器**进入连接器管理页面。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/14.png)
  3. 在连接器管理页面，单击**查看**，您可以获取连接器关联的客户端信息，包括 Client_Id、Client_Secret 和 Redirect_Uri，分别对应客户端 ID、客户端密钥、授权回调地址。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/15.png)
 3. 获取 API 请求地址：系统自动填写，无需改动。
 4. 认证类型：密码认证：客户填写销售易登录的账号、密码以及 [获取用户身份安全令牌](#Get) 进行认证，可参考官方 [Open API](https://developer.xiaoshouyi.com/listenter) 。  
 >?微连接仅支持密码认证方式。
-5. [获取用户身份安全令牌](id:Get)：
-当使用 API 与销售易系统交互时，需要安全令牌才能登录并认证成功。  
+5. [获取用户身份安全令牌](id:Get)：当使用 API 与销售易系统交互时，需要安全令牌才能登录并认证成功。  
  1. 登录 [销售易](https://login.xiaoshouyi.com)。 
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/16.png)
- 2. 在左侧导航栏底部单击**设置>个人设置**进入个人设置页面。
+ 2. 在左侧导航栏底部单击**设置 > 个人设置**进入个人设置页面。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/17.png)
  3. 在个人设置页面，单击**安全令牌**进入安全令牌页面。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/18.png)
@@ -84,9 +83,8 @@
  1. 选择**企业微信机器人**连接器。
  2. 选择操作**发送文本消息**，并单击**下一步**。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/36.png)
-2. 选择应用账号：
-企业微信机器人需要填写如下内容：  
-- webhook 地址：必填，企微机器人的 Webhook 地址，可从机器人的详情页获取。
+2. 选择应用账号：企业微信机器人需要填写如下内容：  
+webhook 地址：必填，企微机器人的 Webhook 地址，可从机器人的详情页获取。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/35.png)
 3. 设置应用参数：配置企业微信机器人推送的消息内容，可拉取腾讯问卷和销售易节点的返回值，也可以自定义输入字段，选填要提醒的成员 ID 或手机号，并单击**下一步**进入测试功能。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/29.png)
@@ -94,20 +92,20 @@
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/30.png)
 
 #### 如何注册或登录企业微信?
-具体操作请参考 [企业微信](https://open.work.weixin.qq.com/help2/pc/14506?person_id=1&searchData=) 文档。
+具体操作请参考 [企业微信](https://open.work.weixin.qq.com/help2/pc/14506?person_id=1&searchData=)。
 
 #### 如何添加企业微信机器人并获取 webhook 地址？
 - Windows 端
  1. 在群聊中添加群机器人，登录后单击右上角的“...”图标，选择**添加群机器人**。若已有机器人可以直接选中机器人添加。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/37.png)
- 2. 新建企业微信机器人。若无机器人，可以单击**新创建一个机器人**，输入机器人名称，单击**添加机器人**即可完成创建。更多机器人详细配置可参考：配置说明。
+ 2. 新建企业微信机器人。若无机器人，可以单击**新创建一个机器人**，输入机器人名称，单击**添加机器人**即可完成创建。更多机器人详细配置可参考配置说明。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/24.png)
  3. 获取 webhook：添加机器人完成后，单击群内企业微信机器人账号，会展示 webhook 地址，复制 webhook 地址即可。若要使公司成员都能使用该企业微信机器人，单击**发布到公司**即可。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/25.png)
 - MacOS 端
  1. 在群聊中添加群机器人：登录后选中群聊右键单击**添加群机器人**。若已有对应功能的机器人可以直接选中机器人添加。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/26.png)
- 2. 新建企业微信机器人：若无机器人，可以单击**新创建一个机器人**，输入机器人名称，单击**添加机器人**即可完成创建。更多机器人详细配置可参考：配置说明。
+ 2. 新建企业微信机器人：若无机器人，可以单击**新创建一个机器人**，输入机器人名称，单击**添加机器人**即可完成创建。更多机器人详细配置可参考配置说明。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/27.png)
  3. 获取 webhook：添加机器人完成后，单击群内对应企业微信机器人账号，会展示 webhook 地址，复制 webhook 地址即可。若要使公司成员都能使用该企业微信机器人，单击**发布到公司**即可。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis1/28.png)
