--- a/product/大数据与AI/万象优图2.0/购买说明/计费概述.md
+++ b/product/大数据与AI/万象优图2.0/购买说明/计费概述.md
@@ -5,15 +5,18 @@
 - **按量计费（后付费）方式**：即按照**实际使用量付费**，每月2日进行账号扣费，3 - 7日会出上月账单。当您开始使用 CI 服务时，CI 默认使用按量计费方式进行计费，您无须主动购买。
 - **资源包（预付费）方式**：是 CI 推出的可优惠购买的固定套餐，可用于抵扣部分功能产生的消耗量，仅适用于中国站，您可自行选择购买。详情可参见 [资源包（预付费）](https://cloud.tencent.com/document/product/460/49023)。
 
+
+## 产品定价
+
+数据万象产品定价按照两种计费方式，分为按量计费定价和资源包定价。具体费用可参见 [CI 产品定价](https://buy.cloud.tencent.com/price/ci)。
+
 由于 CI 的数据存储基于对象存储（Cloud Object Storage，COS），所以存储部分的费用会在 COS 的账单中给出。具体费用可参考 [COS 产品定价](https://buy.cloud.tencent.com/price/cos)。
 
 
 ## 计费冻结机制
 本月结算完成后，将以本月账单金额的120%对帐户进行下月费用预估冻结。下月结算时，先解冻上月的冻结费用，再进行本月使用额度的扣费。
 
-## 产品定价
 
-数据万象产品定价按照两种计费方式，分为按量计费定价和资源包定价。具体价格，请分别参见 [计费项](https://cloud.tencent.com/document/product/460/58116) 和 [资源包（预付费）](https://cloud.tencent.com/document/product/460/49023)。
 
 
 ## 计费项
