--- a/product/互联网中间件/TDMQ CMQ 版/01 产品简介/04 应用场景.md
+++ b/product/互联网中间件/TDMQ CMQ 版/01 产品简介/04 应用场景.md
@@ -1,6 +1,6 @@
 ## 一对多生产
 
-系统组件之间或者应用之间通信较多，需要组件或者应用自身维护彼此的网络连接，而且通信的内容不仅一种，实现难度和维护成本较大。 使用TDMQ CMQ 版可以实现生产者向多个订阅者，同时异步投递消息的能力，同时客户端可以通过消息过滤消费其中的某类消息。
+系统组件之间或者应用之间通信较多，需要组件或者应用自身维护彼此的网络连接，而且通信的内容不仅一种，实现难度和维护成本较大。 使用 TDMQ CMQ 版可以实现生产者向多个订阅者，同时异步投递消息的能力，同时客户端可以通过消息过滤消费其中的某类消息。
 
 ![](https://mc.qcloudimg.com/static/img/8488cd1cbe9a6ef6bc1380fc168165df/image.png)
 
@@ -30,7 +30,7 @@
 
 ## 跨用户数据交换
 
-两个服务在网络不能互通或者应用的路由信息（例如 IP 和端口）不确定的情况下需要通信。例如，两个腾讯云上的服务在不知道对方地址的情况下需要进行通信，引入 TDMQ CMQ 版后，可以通过约定相同的队列名，一个向队列中发消息，一个从队列中收消息来进行数据交换。
+两个服务在网络不能互通或者应用的路由信息（例如 IP 和端口）不确定的情况下需要通信。例如：两个腾讯云上的服务在不知道对方地址的情况下需要进行通信，引入 TDMQ CMQ 版后，可以通过约定相同的队列名，一个向队列中发消息，一个从队列中收消息来进行数据交换。
 
 ![](https://main.qcloudimg.com/raw/226d42ccc5d3883b310f31e4dc8649c9.png)
 
