--- a/product/大数据与AI/万象优图2.0/开发者手册/请求签名.md
+++ b/product/大数据与AI/万象优图2.0/开发者手册/请求签名.md
@@ -9,14 +9,10 @@
 
 ### 签名算法
 
-当前存在 XML 和 JSON 两个签名版本：
+数据万象已实现和 COS 域名的合并，使用 COS 域名即可实现图片处理操作。对于数据万象域名和 COS 域名，在使用上有时区别，需要分别使用不同的签名版本：
 
-- **下载时**操作需使用 **JSON** 版本签名，可参阅 JSON 版本 [请求签名](https://cloud.tencent.com/document/product/436/6054)。
-- **上传时**操作和 **Bucket 接口**等操作需使用 **XML** 版本签名，可参阅 XML 版本 [请求签名](https://cloud.tencent.com/document/product/436/7778)。
-
->!
-- 下载时请求头部 Host 形式为`<BucketName-APPID>.<picture region>.myqcloud.com/<picture name>`，例如 `examplebucket-1250000000.picsh.myqcloud.com/picture.jpeg`
-- 上传时请求头部 Host 形式为`<BucketName-APPID>.pic.<Region>.myqcloud.com`，例如 `examplebucket-1250000000.pic.ap-shanghai.myqcloud.com/picture.jpeg`
+- **数据万象域名**：形式为`<BucketName-APPID>.<picture region>.myqcloud.com/<picture name>`，例如 `examplebucket-1250000000.picsh.myqcloud.com/picture.jpeg`，操作需使用 **JSON** 版本签名，可参阅 JSON 版本 [请求签名](https://cloud.tencent.com/document/product/436/6054)。
+- **COS 域名**：形式为`<BucketName-APPID>.cos.<Region>.myqcloud.com`，例如 `examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/picture.jpeg`，操作需使用 **XML** 版本签名，可参阅 XML 版本 [请求签名](https://cloud.tencent.com/document/product/436/7778)。
 
 ### 签名适用场景
 
@@ -32,7 +28,7 @@
    </tr>
    <tr>
       <td>开启防盗链</td>
-      <td>JSON 版本签名</td>
+      <td>验证签名</td>
    </tr>
    <tr>
       <td>上传时数据处理</td>
@@ -50,6 +46,7 @@
       <td>XML 版本签名</td>
    </tr>
 </table>
+
 
 ### 签名工具
 
@@ -75,4 +72,6 @@
 
 
 >!上述示例中使用 `...` 省略了部分具体签名内容。
+
+
 
