--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
@@ -1,4 +1,4 @@
-﻿在腾讯云专线使用过程中，每条通道的业务不同其承载的流量负荷不同，如果通道被业务流量占满则会导致线路不可用。针对这里一问题，腾讯云专线推出了网关粒度的流量分析功能，让您第一时间了解流量 Top N 的 IP 及流量详情，协助您进行业务调整。
+在腾讯云专线使用过程中，每条通道的业务不同其承载的流量负荷不同，如果通道被业务流量占满则会导致线路不可用。针对这里一问题，腾讯云专线推出了网关粒度的流量分析功能，让您第一时间了解流量 Top N 的 IP 及流量详情，协助您进行业务调整。
 
 ## 公测通告
 专线网关流量分析功能目前处理公测阶段，公测时间2021年08月31日至2021年12月31日，公测期间免费使用。
