--- a/product/数据库/数据传输服务DTS/最佳实践/使用数据同步构建多活数据中心.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/使用数据同步构建多活数据中心.md
@@ -6,18 +6,18 @@
 
 ## 注意事项
 
-* DTS 在执行全量数据同步时，会占用一定源端实例资源，可能会导致源实例负载上升，增加数据库自身压力。如果您数据库配置过低，建议您在业务低峰期进行。
-* 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键，对于没有主键或者非空唯一键的表，有数据重复的风险 。
-* 用户应提前规划好数据，每个数据中心负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，多个源端负责的主键存在交叉，请选择合理的冲突策略，使同步行为和数据符合预期。
+- DTS 在执行全量数据同步时，会占用一定源端实例资源，可能会导致源实例负载上升，增加数据库自身压力。如果您数据库配置过低，建议您在业务低峰期进行。
+- 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键，对于没有主键或者非空唯一键的表，有数据重复的风险 。
+- 用户应提前规划好数据，每个数据中心负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，多个源端负责的主键存在交叉，请选择合理的冲突策略，使同步行为和数据符合预期。
 
 ## 应用限制
 
-* 多个同步任务配置中 DDL 不能形成环形链路。
-* 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建双向同步任务。
+- 多个同步任务配置中 DDL 不能形成环形链路。
+- 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建双向同步任务。
 
 ## DDL 配置原则
 
-为了方便用户理解，如下原则将结合具体的场景来解释说明，以三活地域中心为例，实例A（北京地域），实例B（上海地域），实例C（广州地域），分别建立A<->B，B<->C，C<->A三个双向同步任务。
+为了方便用户理解，如下原则将结合具体的场景来解释说明，以三活地域中心为例，实例 A（北京地域），实例 B（上海地域），实例 C（广州地域），分别建立 A<->B，B<->C，C<->A 三个双向同步任务。
 
 <img src="https://main.qcloudimg.com/raw/273f8bdd817008e04f79a1e5a18d049e.png" style="zoom:40%;" />
 
@@ -27,7 +27,7 @@
 
 - 同一个库表对象不能接收多个数据中心的 DDL 同步，否则多个数据中心的 DDL 可能在目标端形成冲突，进而引发错误。
   
-  示例：实例 A 和 C 有相同名称的表需要同步到实例 B 中，则同步任务1和4中，只能在一个任务选择DDL。
+  示例：实例 A 和 C 有相同名称的表需要同步到实例 B 中，则同步任务1和4中，只能在一个任务选择 DDL。
   
 - 在校验阶段，同步系统会结合当前用户的所有其他同步任务，判断正在新建的同步任务是否会造成 DDL 循环或者冲突，并给出提示供用户参考。
 
@@ -59,7 +59,7 @@
 
 本文针对典型多活数据中心场景做出以下推荐配置，请用户参考操作。
 
-以三活地域中心为例，实例A（北京地域），实例B（上海地域），实例C（广州地域），分别建立 A<->B（任务1和2），B<->C（任务3和4），C<->A（任务5和6） 三个双向同步任务。
+以三活地域中心为例，实例 A（北京地域），实例 B（上海地域），实例 C（广州地域），分别建立 A<->B（任务1和2），B<->C（任务3和4），C<->A（任务5和6） 三个双向同步任务。
 
 <table>
 <tr><th width="16%">场景</th> <th width="17%">时间要求</th> <th width="9%">同步任务</th><th width="14%">初始化类型</th><th width="14%">已存在同名表</th><th width="16%">冲突处理机制</th><th width="18%">同步操作类型</th></tr>
@@ -76,5 +76,6 @@
 <tr>
 <td>任务6</td><td>不选择</td><td>忽略并继续执行</td></tr>
  <tr>
-<td>场景二：实例A、B、C都有库表结构和数据</td><td>无</td><td>任务1-6</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<td>场景二：实例 A、B、C 都有库表结构和数据</td><td>无</td><td>任务1-6</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
 </table>
+
