--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
@@ -1,4 +1,4 @@
-在腾讯云专线使用过程中，每条通道的业务不同其承载的流量负荷不同，如果通道被业务流量占满则会导致线路不可用。针对这里一问题，腾讯云专线推出了网关粒度的流量分析功能，让您第一时间了解流量 Top N 的 IP 及流量详情，协助您进行业务调整。
+在腾讯云专线使用过程中，每条通道的业务不同其承载的流量负荷不同，如果通道被业务流量占满则会导致线路不可用。针对这一问题，腾讯云专线推出了网关粒度的流量分析功能，让您第一时间了解流量 Top N 的 IP 及流量详情，协助您进行业务调整。
 
 ## 公测通告
 专线网关流量分析功能目前处理公测阶段，公测时间2021年08月31日至2021年12月31日，公测期间免费使用。
@@ -24,7 +24,7 @@
     - 时间粒度包括**1分钟**、**1小时**和**1天**，即按分钟/小时/天粒度来统计流量。
 >?  
 >- 如果您预计流量分析时间约0~30分钟，时间粒度建议选择1分钟，超过30分钟时间粒度建议选择小时。
->- 如果您想要3分钟内更加准确、细粒度的流量统计分析，建议时间周期选**三分钟前**，自定义时间段跨度为1分钟（如2021-08-06:14:18～2021-08-06:14:19），时间粒度选择**1分钟**。
+>- 如果您想要3分钟内更加准确、细粒度的流量统计分析，建议时间周期选**三分钟前**，自定义时间段跨度为1分钟（如2021-08-06:14:18～2021-08-06:14:17），时间粒度选择**1分钟**。
 > 
  - TOP N 查看。  
 在流量列表中展示了**TOP 5**、**TOP 20**、**TOP 50**和自定义等四种通道流量排行榜，如果您需要查看指定 IP 的流量信息可在右侧输入框键入相应的 IP 地址。
