--- a/product/计算与网络/轻量应用服务器/操作指南/重置应用.md
+++ b/product/计算与网络/轻量应用服务器/操作指南/重置应用.md
@@ -26,7 +26,7 @@
 >?如轻量应用服务器实例使用系统镜像，则不支持通过此方式重置应用。
 >
 ![](https://main.qcloudimg.com/raw/5d4816aee840fb0f0ca5f8b68e2eb8b0.png)
-4. 在弹出的“重置应用”窗口中，选择重置应用需要使用的镜像（系统镜像、应用镜像及自定义镜像均可），阅读重置确认事项，勾选【确认已了解以上内容，我确定已备份完成】，单击【确定】。如下图所示：
-![](https://main.qcloudimg.com/raw/aa03411b75c7ba485450d5f60de60591.png)
+4. 在“重置应用”页面中，选择重置应用需要使用的镜像（系统镜像、应用镜像、自定义镜像及 Docker 基础镜像均可），阅读重置确认事项，勾选【确认已了解以上内容，我确定已备份完成】，单击【确定】。如下图所示：
+![](https://main.qcloudimg.com/raw/b1b74fbcea9237e66747f9897a4725e1.png)
 
 
