--- a/product/计算与网络/轻量应用服务器/产品简介/产品概述.md
+++ b/product/计算与网络/轻量应用服务器/产品简介/产品概述.md
@@ -81,7 +81,7 @@
 - **镜像描述**
 Docker 基础镜像中除了包含底层的操作系统（如 CentOS、Ubuntu 等）外，还默认封装了 Docker 软件、运行环境以及相关配置文件。
 - **适用场景**
-适用于快速部署容器化应用场景，您可以在使用 Docker 基础镜像的轻量应用服务器实例中通过控制台快速创建和管理 Docker 容器。
+适用于快速部署容器化应用场景，用户可以在使用 Docker 基础镜像的轻量应用服务器实例中通过控制台快速创建和管理 Docker 容器。
 - **包含镜像**
   - CentOS 8.2 - Docker 20
   - CentOS 7.6 - Docker 20
