--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/网关流量分析.md
@@ -7,19 +7,19 @@
 
 
 ## 操作步骤
-1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/dc) ，并在左侧导航栏单击**专线网关**。
+1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/dc)，并在左侧导航栏单击**专线网关**。
 2. 在“专线网关”页面上方选择地域和私有网络，然后在专线网关列表中单击目标实例 ID。
 ![](https://main.qcloudimg.com/raw/9052d66eab5730eb84a66278cd1cf4a5.png)
 3. 在专线实例详情页单击**流量分析**，并开启流量采集任务。
 ![](https://main.qcloudimg.com/raw/dd2cccb6af9c2583f534f6c4deabd2f9.png)
-	开启后，系统会自动统计所有通过本网关的数据流量，约3-5分钟后将采集结果展示。
+	开启后，系统会自动统计所有通过本网关的数据流量，约3 - 5分钟后将采集结果展示。
 4. 查看流量分析结果。
 ![](https://main.qcloudimg.com/raw/b7204ce7141280c800fc79480c1ac918.png)
  - 时间周期和时间粒度设置。
-    - 时间周期包括**3分钟前**、**1小时前**、**七天前**。
+    - 时间周期包括**3分钟前**、**1小时前**、**7天前**。
     - 时间粒度包括**1分钟**、**1小时**和**1天**，即按分钟/小时/天粒度来统计流量。
 >?  
->- 如果您预计流量分析时间约0~30分钟，时间粒度建议选择1分钟，超过30分钟时间粒度建议选择小时。
+>- 如果您预计流量分析时间约0 ~ 30分钟，时间粒度建议选择1分钟，超过30分钟时间粒度建议选择小时。
 >- 如果您想要3分钟内更加准确、细粒度的流量统计分析，建议时间周期选**三分钟前**，自定义时间段跨度为1分钟（如2021-08-06:14:18～2021-08-06:14:17），时间粒度选择**1分钟**。
 > 
  - TOP N 查看。  
