--- a/product/域名与网站/域名注册/域名服务/批量操作/域名批量账号间转移.md
+++ b/product/域名与网站/域名注册/域名服务/批量操作/域名批量账号间转移.md
@@ -3,7 +3,7 @@
 
 ## 前提条件
 1. 登录腾讯云 [域名注册控制台](https://console.cloud.tencent.com/domain/)。    
-2. 在左侧导航栏中，选择【批量操作】>【账号间转移】，进入 “账号间转移” 管理页面。
+2. 在左侧导航栏中，选择**批量操作 > 账号间转移**，进入 “账号间转移” 管理页面。
 
 
 ## 操作步骤
@@ -22,12 +22,12 @@
 - **输入域名**：在文本框中手动输入或者粘贴账号间待转移的域名，域名单次输入最大支持200个/次。
 >? 域名输入个数超过200个，将无法进行下一步操作。
 >
-- **上传文件**：单击【点击上传】，选择本地文件批量上传域名。
+- **上传文件**：单击**点击上传**，选择本地文件批量上传域名。
 >!
 > - 域名上传个数最大支持4000个/次，超过数量时将截取前4000个。
 > - 上传文件仅支持 **txt/xls/xlsx** 格式文件。
 > - 上传的文件大小不超过2M，超过文件大小将无法进行上传。
-> - 您可以单击【下载模板】，查看文件模板填写格式。
+> - 您可以单击**下载模板**，查看文件模板填写格式。
 
 ### 步骤2：输入账号
 >!
@@ -35,7 +35,7 @@
 > - 域名账号间转移，将分别校验各个域名的状态及权限，可能存在部分域名转移失败。
 > - 转移操作无法撤回，转移成功后对方账号将获得这些域名所有管理权限。请确保账号 ID 填写正确。
  
-1. 请输入待转移的账号 ID，并单击【确定】。如下图所示：
+1. 请输入待转移的账号 ID，并单击**确定**。如下图所示：
 ![](https://main.qcloudimg.com/raw/1b0fdc65c6093aace51c19f8d024bc15.png)
  - **转移域名**：请确认您需要转移的域名是否正确。
  - **指定账号**：
@@ -45,17 +45,17 @@
 <ul><li>勾选后，则将对应的 DNS 解析域名管理权限转移至对方账号，如有解析套餐也将一并转移，<b>该操作不可撤回</b>。</li>
 <li>如当前账号下无该 DNS 解析域名，则不进行转移。具体可查看 <a href ="https://console.dnspod.cn/dns/list">DNS 解析列表</a>。</li></ul>
 </dx-alert>
-2. 单击【下一步】，进入信息确认页面。如下图所示：
+2. 单击**下一步**，进入信息确认页面。如下图所示：
 ![](https://main.qcloudimg.com/raw/5a7041c7765f72977b336a4dfc4cff94.png)
-3. 单击【确认提交】，在弹出的 “身份验证” 窗口中，获取并填写短信验证码。如下图所示：
+3. 单击**确认提交**，在弹出的 “身份验证” 窗口中，获取并填写短信验证码。如下图所示：
 >!如您在账号操作保护中开启了手机验证码选项，您在转移账号过程中将会显示以下验证内容，相关设置可参考 [操作保护](https://cloud.tencent.com/document/product/378/10740)。
 >
 ![](https://main.qcloudimg.com/raw/e5d712ca5d1d9807d43f0e3a00e8c8c9.png)
-4. 单击【确定】，即可将域名账号转移至新的账号下。
+4. 单击**确定**，即可将域名账号转移至新的账号下。
 
 ### 步骤3：查看操作日志
-1. 在【批量操作】管理页面，选择【操作日志】页签。
-2. 选择【操作任务】>【账号间转移】，并单击【查看详情】，即可查看您的域名账号间转移结果。如下图所示：
+1. 在**批量操作**管理页面，选择**操作日志**页签。
+2. 选择**操作任务 > 账号间转移**，并单击**查看详情**，即可查看您的域名账号间转移结果。如下图所示：
 ![](https://main.qcloudimg.com/raw/5aa5840d5aa3afb29e6bf0c7c5c08871.png)
 
 
