--- a/product/企业协同/腾讯会议/产品动态.md
+++ b/product/企业协同/腾讯会议/产品动态.md
@@ -8,6 +8,16 @@
 	<th style="width: 25%;"><center>更新时间</center></th>
 	</tr>
 		<tr>
+	<td><center> V2.17.0</center></td>
+	<td>
+1. PowerPoint 支持多批注跟随翻页：共享屏幕时，批注支持跟随 PowerPoint 放映模式翻页，互动批注动态切换，回顾保存更便捷。<br>
+2. 参会成员均可申请主持人开启云录制：所有参会成员均可向主持人申请开启云录制，云端记录重要会议内容，高效输出会议结论。<br>
+3. 个人笔记主视图功能：个人笔记支持主视图画面展示，速记体验更佳。<br>
+4. 微信内预定及发起会议更快捷：会议 ID、预定会议及发起会议的口令支持被微信 # 话题识别。
+</td>
+<td><center>2021-09-02</center></td>
+</tr>
+		<tr>
 	<td><center> V2.16.0</center></td>
 	<td>
 共享外接视频源：支持外部视频设备（例如：采集卡、相机等）直接接入电脑端共享会议，多场景同时使用两路视频画面，便捷流畅。
@@ -181,6 +191,16 @@
 	<th style="width: 50%;"><center>更新内容</center></th>
 	<th style="width: 25%;"><center>更新时间</center></th>
 	</tr>
+		<tr>
+	<td><center> V2.17.0</center></td>
+	<td>
+1. PowerPoint 支持多批注跟随翻页：共享屏幕时，批注支持跟随 PowerPoint 放映模式翻页，互动批注动态切换，回顾保存更便捷。<br>
+2. 参会成员均可申请主持人开启云录制：所有参会成员均可向主持人申请开启云录制，云端记录重要会议内容，高效输出会议结论。<br>
+3. 个人笔记主视图功能：个人笔记支持主视图画面展示，速记体验更佳。<br>
+4. 微信内预定及发起会议更快捷：会议 ID、预定会议及发起会议的口令支持被微信 # 话题识别。
+</td>
+<td><center>2021-09-02</center></td>
+</tr>
 			<tr>
 	<td><center> V2.16.0</center></td>
 	<td>
@@ -358,6 +378,15 @@
 	<th style="width: 50%;"><center>更新内容</center></th>
 	<th style="width: 25%;"><center>更新时间</center></th>
 </tr>
+	<tr>
+	<td><center> V2.17.0</center></td>
+	<td>
+1. 参会成员均可申请主持人开启云录制：所有参会成员均可向主持人申请开启云录制，云端记录重要会议内容，高效输出会议结论。<br>
+2. 入会设置麦克风及摄像头：设置中新增麦克风和摄像头的入会状态选项，入会更从容。<br>
+3. 微信内预定及发起会议更快捷：会议 ID、预定会议及发起会议的口令支持被微信 # 话题识别。
+</td>
+<td><center>2021-09-02</center></td>
+</tr>
 <tr>
 	<td><center> V2.16.0 </center></td>
 	<td>
@@ -508,6 +537,15 @@
 	<th style="width: 50%;"><center>更新内容</center></th>
 	<th style="width: 25%;"><center>更新时间</center></th>
 	<tr>
+	<tr>
+	<td><center> V2.17.0</center></td>
+	<td>
+1. 参会成员均可申请主持人开启云录制：所有参会成员均可向主持人申请开启云录制，云端记录重要会议内容，高效输出会议结论。<br>
+2. 入会设置麦克风及摄像头：设置中新增麦克风和摄像头的入会状态选项，入会更从容。<br>
+3. 微信内预定及发起会议更快捷：会议 ID、预定会议及发起会议的口令支持被微信 # 话题识别。
+</td>
+<td><center>2021-09-02</center></td>
+</tr>
 	<tr>
 	<td><center> V2.16.0 </center></td>
 	<td>
