--- a/product/安全服务/数字身份管控平台公众版/操作指南/认证管理/账号密码认证.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/认证管理/账号密码认证.md
@@ -2,6 +2,7 @@
 在用户目录及自定义属性创建完成后，您可以进行新建用户的操作。
 
 ## 操作步骤
+### 新建认证源
 1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
 2. 在通用认证源页面，单击【新建认证源】，进入新建认证源页面。
 ![](https://main.qcloudimg.com/raw/cac93cbfd835e939665b4d3b450d5bfc.png)
@@ -15,23 +16,33 @@
 >- 认证源描述：认证源的简单描述。
 >
 ![](https://main.qcloudimg.com/raw/5cf7b467cc4ead7b5d950c9b96c49078.png)
-5. 在新建认证源页面，配置密码策略、密码锁定策略和验证码，单击【确定】，即可创建认证源。
- - **配置密码策略**
-    - 选择密码策略：用于限制用户设置密码的强度，支持5中密码策略，默认密码强度较强。
-    - 历史密码记录次数：避免在一段时间内重用相同的密码，范围1～148次。
-	![](https://main.qcloudimg.com/raw/0fee6c6cfae3b1fb698db9c082f077b2.png)
- - **密码锁定策略**
-    - 密码锁定：开启后，用户在登录失败时将被限制失败次数。
-    - 锁定阈值：密码锁定开启时，需要设置该值。输入错误次数超过设定范围，账户将被锁定，在解锁前都不能再次登录。范围1～999次。
-    - 密码尝试时间范围：密码锁定开启时，需要设置该值。在设置时间范围内，输入错误次数超过密码锁定阈值，用户将被锁定。范围1～99999小时。
-    - 解锁时间：密码锁定开启时，需要设置该值。在自动解锁之前保持锁定的时间。范围1～999999分钟。
-![](https://main.qcloudimg.com/raw/2700b724a3d366dc8dda196316116a61.png)
- - **验证码**
-    - 验证码：开启后，用户在登录失败超过限定次数时，会自动开启验证码验证。
-    - 密码错误次数：验证码开启时，需要设置该值。输入错误次数超过设定范围，即开启验证码登录验证，范围1～999次。
+5. 在新建认证源页面，配置相关参数，单击【确定】，即可创建认证源。
+![](https://main.qcloudimg.com/raw/dd4f90700fb4ce1971b1e781231a5e25.png)
+
+#### 配置策略参数说明[](id:CSSM)
+- **配置密码策略**
+ - 选择密码策略：用于限制用户设置密码的强度，支持5中密码策略，默认密码强度较强。
+ - 历史密码记录次数：避免在一段时间内重用相同的密码，范围1～148次。
+- **密码锁定策略**
+ - 密码锁定：开启后，用户在登录失败时将被限制失败次数。
+ - 锁定阈值：密码锁定开启时，需要设置该值。输入错误次数超过设定范围，账户将被锁定，在解锁前都不能再次登录。范围1～999次。
+ - 密码尝试时间范围：密码锁定开启时，需要设置该值。在设置时间范围内，输入错误次数超过密码锁定阈值，用户将被锁定。范围1～99999小时。
+ - 解锁时间：密码锁定开启时，需要设置该值。在自动解锁之前保持锁定的时间。范围1～999999分钟。
+- **验证码**
+ - 验证码：开启后，用户在登录失败超过限定次数时，会自动开启验证码验证。
+ - 密码错误次数：验证码开启时，需要设置该值。输入错误次数超过设定范围，即开启验证码登录验证，范围1～999次。
 >!如果同时开启密码锁定时，建议此处设置要小于锁定阈值，否则在验证码出现前用户已被锁定。
->
-![](https://main.qcloudimg.com/raw/cdba918e0a32bbd66eada8e550d95550.png)
- - **测试密码强度**
+
+- **测试密码强度**
 配置密码策略后，可输入测试密码，验证是否满足密码策略。
 ![](https://main.qcloudimg.com/raw/9cebb424018896f2abe05ac6033a499e.png)
+
+### 编辑认证源
+1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
+2. 在通用认证源页面，单击【编辑】，进入编辑账号密码认证的基本信息页面。
+![](https://main.qcloudimg.com/raw/56fb09106bd31edd1b37b9fb9e09631c.png)
+3. 在基本信息页面，根据需求修改基本信息，单击【确定】，即可修改基本信息。
+![](https://main.qcloudimg.com/raw/52ec8190ffedf21eacd79924bd3283d8.png)
+4. 单击【密码策略】，切换至编辑账号密码认证的密码策略页面。
+5. 在密码策略页面，对认证源策略进行修改，单击【确定】，即可修改认证源密码策略。
+>?认证源密码策略相关参数请参考：[配置策略参数说明](#CSSM)。
