--- a/product/域名与网站/域名注册/常见问题/实名认证常见失败原因以及解决方案.md
+++ b/product/域名与网站/域名注册/常见问题/实名认证常见失败原因以及解决方案.md
@@ -2,7 +2,7 @@
 >!您在提交资料过程中，上传的资料图片须为彩色扫描件或彩色复印件。
 
 ### 证件电子信息核验不合格
-当系统提示【证件电子信息核验不合格】时，您可以按照以下步骤验证：
+当系统提示**证件电子信息核验不合格**时，您可以按照以下步骤验证：
 1. 请您检查域名所有者是否填写正确，需与证件中的主体信息保持完全一致。
 >!
  - 域名所有者请勿包含空格。
