--- a/product/域名与网站/域名注册/常见问题/域名续费相关.md
+++ b/product/域名与网站/域名注册/常见问题/域名续费相关.md
@@ -18,8 +18,8 @@
 您的域名如果过期已经超过 “续费宽限期”，则您的域名处于30天左右的 “域名赎回期”，此时您需要花费超过该域名正常续费价格的费用对您的域名进行赎回操作。
 赎回域名操作：
 1. 首先登录腾讯云 [域名服务控制台](https://console.cloud.tencent.com/domain/mydomain) 。
-2. 在【全部域名】列表页面，选择您需要进行赎回的域名，单击【赎回期】，弹出 “续费” 窗口，或在【操作】栏下单击【更多】，选择【续费】。
-3. 在弹出的窗口中单击【确定】，完成付费即可完成域名赎回。
+2. 在**全部域名**列表页面，选择您需要进行赎回的域名，单击**赎回期**，弹出 “续费” 窗口，或在**操作**栏下单击**更多**，选择**续费**。
+3. 在弹出的窗口中单击**确定**，完成付费即可完成域名赎回。
 
 >?
 >- 域名在 “赎回期” 期间，需要用比正常续费价格高的费用对域名进行赎回，域名赎回价格由注册局规定，详情价格请参见：[域名价格总览](https://buy.cloud.tencent.com/domain?price=1)。
@@ -49,7 +49,7 @@
 
 ### 如何查看域名注册商及账号？
 若您忘记域名注册商及账号信息，您可以先通过 [Whois 信息](https://whois.cloud.tencent.com/) 查询注册商，然后再尝试通过域名注册信息找回其对应的账号密码 。
- - 若您的域名在腾讯云注册，您可以通过腾讯云 [查找账号](https://cloud.tencent.com/services/forgotAccount)，选择【域名】的方式找回您的账号。
+ - 若您的域名在腾讯云注册，您可以通过腾讯云 [查找账号](https://cloud.tencent.com/services/forgotAccount)，选择**域名**的方式找回您的账号。
  - 若您的域名在其他注册商注册，建议您联系您的域名注册商咨询找回账号相关问题。
 
 ### 域名过期的状态有哪些？
