--- a/product/域名与网站/域名注册/常见问题/域名过户相关.md
+++ b/product/域名与网站/域名注册/常见问题/域名过户相关.md
@@ -5,7 +5,7 @@
 >- 当前仅支持转移到腾讯云国内版主账号，暂不支持转移到协助者、子用户、腾讯云国际账号。
 
 ### 域名账号间转移如何操作？
- 域名转移的操作，请进入【[域名注册控制台](https://console.cloud.tencent.com/domain)】 >【管理】>【域名转移】，具体操作请参考 [域名账号间转移](https://cloud.tencent.com/document/product/242/9692)。
+ 域名转移的操作，请进入**[域名注册控制台](https://console.cloud.tencent.com/domain) > 管理 > 域名转移**，具体操作请参考 [域名账号间转移](https://cloud.tencent.com/document/product/242/9692)。
 
 ### 腾讯云支持批量域名账号间转移功能吗？
 支持。腾讯云已提供批量域名账号间转移功能，具体操作请查看 [批量域名账号间转移](https://cloud.tencent.com/document/product/242/46461)。
