--- a/product/物联网/物联网开发平台/应用开发指南/小程序开发/腾讯连连 H5 自定义开发/开发指南.md
+++ b/product/物联网/物联网开发平台/应用开发指南/小程序开发/腾讯连连 H5 自定义开发/开发指南.md
@@ -565,9 +565,6 @@ function Page() {
 }
 ```
 
-<blockquote class="d-mod-explain">
-							<div class="d-mod-title d-explain-title">
-								<i class="d-icon-explain"></i><strong>启动说明：</strong>
-							</div>
-               <p>由于极速模式是针对产品级生效，存量产品请务必全量发布适配版本后，再开启极速模式，否则可能会影响到老版本用户的正常使用。</p>
-						</blockquote>
+## 启动说明
+由于极速模式是针对产品级生效，存量产品请务必全量发布适配版本后，再开启极速模式，否则可能会影响到老版本用户的正常使用。
+						
