--- a/product/计算与网络/专线接入/专线接入产品动态.md
+++ b/product/计算与网络/专线接入/专线接入产品动态.md
@@ -8,7 +8,7 @@
 </tr>
 <tr>
 <td>专线网关支持流量分析</td>
-<td>对经流专线网关的流量进行统计分析并进行 TOP 展示。如总流量、平均带宽、总包量、平均包转发量和流量占比等，协助您调整与规划业务。</td>
+<td>对经流专线网关的流量进行统计分析并进行 TOP 展示，如总流量、平均带宽、总包量、平均包转发量和流量占比等，协助您调整与规划业务。</td>
 <td>2021-08-31</td>
 <td><a href="https://cloud.tencent.com/document/product/216/61093">网关流量分析</a></td>
 </tr>
