--- a/product/计算与网络/云服务器/产品动态.md
+++ b/product/计算与网络/云服务器/产品动态.md
@@ -1,3 +1,14 @@
+## 2021年09月
+<table>
+	<tr><th style="width: 25%;">动态名称</th><th style="width: 50%;">动态描述</th><th style="width: 25%;">相关文档</th></tr>
+	<tr>
+	<td>云服务器第六代新机型全量上线</td>	<td>云服务器全量上线标准型 SA3、标准型 S6、计算型 C6、内存型 M6 机型。</td>
+		<td><a href="https://cloud.tencent.com/document/product/213/11518">实例规格</a>
+	</td>
+	</tr>
+</table>
+
+
 ## 2021年08月
 <table>
 	<tr><th style="width: 25%;">动态名称</th><th style="width: 50%;">动态描述</th><th style="width: 25%;">相关文档</th></tr>
